--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
-<!--1713748503000-->
-[重庆燃气费暴涨事件-国民是否应为财政危机埋单？ - 微言微语](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%BE%AE%E8%A8%80%E5%BE%AE%E8%AF%AD/20240421-%E9%87%8D%E5%BA%86%E7%87%83%E6%B0%94%E8%B4%B9%E6%9A%B4%E6%B6%A8%E4%BA%8B%E4%BB%B6-%E5%9B%BD%E6%B0%91%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E8%B4%A2%E6%94%BF%E5%8D%B1%E6%9C%BA%E5%9F%8B%E5%8D%95)
+<!--1713771902000-->
+[日本大学两名华人教授2023年相继在中国失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA)
 ------
 
-<div>21/04/2024 - 12:20</div><img src="https://s.rfi.fr/media/display/405e895e-3298-11ee-8ffc-005056a90321/w:1280/p:16x9/Photo%204%20ter%20village%20migrants.jpg"><p><strong>由央企华润控股的重庆燃气公司近日成为中国舆论焦点，起因是四月份以来，众多重庆成都用户投诉自从更换燃气表后，燃气费突然异常飙升，甚至有人停用燃气，燃气表仍在转动，有用户晒出6000元的离谱账单。重庆燃气公司在七千多用户投诉的压力下展开调查，承认有问题，声明启动退款行动。然而社交平台对该公司的声明并不买账，指该公司涉嫌犯罪应启动刑事调查，网民在议论的同时指责政府正用任意提高公共服务费的方式向国民转嫁财政危机。                    </strong></p><div><p>网友@荣剑发帖说：重庆燃气公司利用换煤气表，多收市民的钱，经众多市民举报，现在被坐实。这个事情的性质犹如盗贼偷窃别人的钱被抓，处理结果却是退钱了事。难道盗贼偷钱也可以用退钱而免于被法律追责吗？</p><p>网友@祥松谈发帖说：经过相关部门的协商，重庆的燃气表竟然真的减缓了运转速度！工作人员无需亲自进入居民家中，便能实现这一调整，大概是通过远程操控技术实现。重庆燃气明明是有组织的刑事犯罪，咋能退钱就完事，现在调查初步结果出来了，重庆燃气在燃气计量上存在重大问题，好比是1方燃气买出3方的钱，让许多用户燃气费用超出平时2～3倍，最高甚至超出正常用气量10倍。让重庆586万家用户叫苦不已，而重庆燃气利润却同比增加824%。燃气公司人均年收入达到21万。无论重庆燃气采取加压还是降低燃气浓度，或者更改气表结构等方式，把1方燃气变成了3方卖给用户，都是犯罪行为，而且这种事需要周密计划多方协同，根本不是一两个人能干成的，需要公司上下全力配合才能干成，尤其涉案金额巨大，</p><p>危及民生，社会危害极大，比市场小贩用七两秤性质严重的多，属于严重的有组织刑事犯罪。在调查事实面前，重庆燃气公司拒不认帐的底气没了，想退钱了事，但既然是有组织的刑事犯罪，咋能退钱就完了。更严重的是，近几年全国多地都出现燃气费用不明猛涨，加重民生困难的情况，显然重庆燃气不是第一家，肯定也不是最后一家这么干的黑心企业。</p><p>网友@桂哥猎手发帖说：某某燃气事件是犯罪，准确的说是诈骗罪且金额巨大，绝不能退钱就了事。如果退钱就了事，那么犯罪成本就是零。退钱了事是懒政、是腐政、是混蛋政！必须对相关部门、公司企业及责任人严肃追责。该撤的撤、该罚的罚、该关的关！法律不容模糊、权利与资本不能凌驾法律之上！</p><p>网友@bows_bob9694发帖说：燃气公司是国营大公司，垄断整个行业，什么违法乱纪的事情都敢做。如此难道不是抢劫性的流氓手段吗？网友@余英发帖说：供电公司、自来水公司、煤气公司等都是代表政府服务和收费的，不应该有损政府的高大形象 。网友@Bruce Mok发帖说：国有资本掌控的都在涨价，比如水电油，烟草等..通胀..民间资本掌控的都在降价，利润就业大减，供大于求..通缩…一胀一缩，统称通杀。</p><p>网友@TheXiangYang发帖说：……川渝地区此次事件背后的同一燃气公司是四川联发，其股东包括四川川港燃气和成都燃气集团。他们背后的股东，是华润燃气投资（中国）有限公司。到了华润这一级，就算查到钢板了。中国四大财阀集团：中信、保利、招商、华润。其实，多数参与民生基础服务的央企国企子公司都是亏损经营的。而之所以能够维持盈利，是因为</p><p>它的钱在别的地方有巨大收益，当然还有大额的国家财政补贴。而地方政府的财政收入，主要来源于税收和卖地。现在时代变了，税收收归国库，由中央统一调配，这几年习近平三令五申要“勒紧裤腰带过日子”，因此，下发到各省市的财政补贴肯定就少了。拿到的补贴少了，房子不好卖，土地出让金规则的更改，使得地方国企央企的日子也不好过了。为什么许多地方公交车停运了，因为上面没有财政补贴了。为什么水电燃油都在涨价，因为提供民生基础服务的央企，要亏损不起了。再不挣钱，行长爷爷的孙子、局长爸爸的儿子、副市长的老婆老妈，就真的要和月薪三千块的打工人一样，过苦日子了。</p><p>网友@庚白星君发帖说：……公共服务费上涨，最先抬高的就是大家的生活成本。在这个工作难找、工资不涨的节骨眼，生活成本若是提高，那么消费降级才是大家的第一选择。大家因为公共服务费上涨而不敢消费，整个社会的消费总需求下降。最难受的还是夹在中间的店家——一边是上涨的成本，不涨价就难以获利存活下去。一边是克制消费的消费者，需求减少，商品难以卖出去。最终的结果，除了苦苦支撑，就是关门止损。一波关门潮可能要来了，紧随其后的，还有降薪潮和裁员潮。</p><p>网友@文昭談古論今发帖说：除了川渝的“智能燃气表”爆表，又有更多网民报告，水表电表都有同样的问题。比如重庆、郑州都有网民反馈，装了新水表之后，就自己跳字，不用也产生费用，你不消费也被消费。所以拉动消费的新三件成了：电表、水表和气表。又称新“三个代表”。当然拉动消费只是戏称，其</p><p>实是割韭菜的新境界——破坏度量衡。这是萧条岁月基于权力，社会分摊损失的过程：权力越弱者</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div>
+<div>21/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/4ababa6e-1611-11ea-9b7f-005056a99247/w:1280/p:16x9/chine%20japon%20190315.jpg"><p><strong>日本亚洲大学一名中国教授自去年2月暂时回国后失踪，他在日本的家人一直无法与他取得联系。另一位日本神户学院大学的华人教授去年夏天也在中国失踪...        </strong></p><div><p>据共同社引述熟悉双边关系的消息人士周日介绍，日本亚洲大学音译名范云涛的教授现年61岁，在中国期间，他是被中国当局联系之后失踪的，因此被认为可能已被拘留。</p><p>此外，日本神户学院大学在今年3月份说，该大学的教授胡士云也在去年夏天回中国后失踪。</p><p>共同社说，两位华人教授在中国失踪引起了人们的关注，因为中国一直在加强维护国家安全的力度，导致包括外国公民在内的人员被以涉嫌从事间谍活动拘留。</p><p>中国政府加强了对与其他国家交往的外国人和中国人的打击力度，预计这将加深中日关系中现有的紧张局势。</p><p>该报道还说，中国政府加强了对外国人和与外国交往的中国人的镇压措施，这很可能会加剧中日关系现有的紧张局势，而这个关系已经因领土争端等一系列问题而受到损害。</p><p>2023年2月底，范云涛返回上海。消息人士说，他失踪前曾告诉身边的人，他被要求陪同当局参加一次审问。他患有慢性疾病，需要适当的治疗。</p><p>范云涛教授是国际法和政治问题专家，他原计划于去年 4 月返回日本，但他在日本的家人一直无法与他取得联系。他已被校方安排休假，由另一名教师负责他的大学课程。</p><p>日本神户学院大学的胡士云在中国失踪后，校方已安排代课老师代替他的工作。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXI3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E5%25A4%25A7%25E5%25AD%25A6%25E4%25B8%25A4%25E5%2590%258D%25E5%258D%258E%25E4%25BA%25BA%25E6%2595%2599%25E6%258E%25882023%25E5%25B9%25B4%25E7%259B%25B8%25E7%25BB%25A7%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXI3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
