--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713651303000-->
-[中国海军成立75周年之际，美菲将举行迄今规模最大的「肩并肩」军演 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240420-%E4%B8%AD%E5%9B%BD%E6%B5%B7%E5%86%9B%E6%88%90%E7%AB%8B75%E5%91%A8%E5%B9%B4%E4%B9%8B%E9%99%85%EF%BC%8C%E7%BE%8E%E8%8F%B2%E5%B0%86%E4%B8%BE%E8%A1%8C%E8%BF%84%E4%BB%8A%E8%A7%84%E6%A8%A1%E6%9C%80%E5%A4%A7%E7%9A%84-%E8%82%A9%E5%B9%B6%E8%82%A9-%E5%86%9B%E6%BC%94)
+<!--1713667501000-->
+[美国会众议院压倒性通过TikTok剥离相关法案](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87tiktok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88)
 ------
 
-<div>20/04/2024 - 13:40</div><img src="https://s.rfi.fr/media/display/e98fc2f0-ff06-11ee-9e4b-005056bfb2b6/w:1280/p:16x9/a4b36f8e-0be8-4841-92e5-1998c81bd74e.png"><p><strong>中国海军成立75周年之际，美菲将举行史上最大规模的「肩并肩」（Balikatan）联合军演。这项一年一度的演习从4月22日起至5月10日结束，届时将约有16,700名军人参加，美方将出动11,000人，菲方将派出5000多人。他们将参加海上安全、空中和导弹防御、动态导弹打击、网络防御和信息作战等方面的训练。                    </strong></p><div><p>据路透社报道，负责这次演习的菲律宾陆军上校迈克尔·洛基科（Michael Logico）说，这将是首次在菲律宾领海之外进行的海上演习。他表示，美菲军人将模拟收复菲律宾最北端被敌方军队占领的岛屿。该岛屿位于面向南中国海的巴拉望省西部，靠近台湾，其中最北端的雅米岛距离台湾仅约140公里。</p><p>美菲军队「肩并肩」联演举行始于1991年，至今已经34个年头。在今年的年度演习中，法国军队将首次派出一艘护卫舰参加，与菲律宾和美国海军军舰在马尼拉南中国海内专属经济区联合巡航。这次由菲律宾、美国和法国海军联合举行的演习被视为历届「肩并肩」规模最大的一次。</p><p>但法国与菲律宾两国并没有签署「驻军地位协议」（SOFA），因此法军只能在菲律宾领海之外参加演习。</p><p>路透社指出，此次演习旨在提高美国和菲律宾两军之间的互操作性。此次演习是在中国最近在南中国海和台湾海峡频频采取咄咄逼人的行为的背景下进行的，而南中国海和台湾海峡是中美紧张关系的导火索。</p><p><strong>针对美菲军演 中国反对“威慑第三方”</strong></p><p>针对美菲计划中的演习，中国外交部已警告菲律宾应该“清醒地认识到”，“拉拢域外国家在南海炫耀武力、挑起对抗，只会加剧紧张局势，破坏地区稳定”。</p><p>据中央社援引中国军事问题专家曹卫东周六向媒体表示，反对菲律宾引进外国的军事力量威慑第三方，并说这已非单单保护菲律宾。</p><p>曹卫东说，美菲两国的军事关系是两国的事情，但中方反对的是军事关系针对第三方。中国与菲律宾是南海周边国家，存在岛屿主权与海上画线争端的问题。</p><p>曹卫东指，美国在菲律宾有5个基地，现在又有4个，其中3个在吕宋岛，“靠近我们的台湾地区”。并且又部署「堤丰武器系统」（Typhon Weapons System ），可搭载「战斧」（Tomahawk）巡戈导弹，加上「标准六型」（SM-6）导弹，这令台湾在「战斧」巡戈导弹的覆盖之下。</p><p>据他强调，中方因而要考虑，“这对台湾岛构成威胁”，还对广东等沿海构成威胁，离大陆的东南沿海城市也很近。如果将这种军事基地部署在菲律宾，无论是对台湾还是中国大陆，“都是安全上的威胁”。</p><p>曹卫东又说，中方坚决反对这样的演习，因为威胁其他国家。除此之外，美菲演习扩大，向外海推进，并且是在美国与俄罗斯撕毁「中导条约」后，第一次在境外部署陆基中程弹道导弹，射程在500公里至5500公里，“部署在我们家门口”，对中国的意图是非常明显。</p><p>至于19日共军成立信息支持部队，曹卫东仅表示，这与编制体制有关，这种改变还是对未来讯息条件下的军事任务有关。</p><p><strong>美军新型陆基导弹首度登上第一岛链</strong></p><p>另据美国《海军新闻》15日消息称，美国陆军的新型陆基导弹发射系统最近在菲律宾北部部署，这套被称为「堤丰」（Typhon）武器系统的中程能力陆基导弹发射系统，正在参与为期两周的「坚盾-24」（Salaknib 24）美菲陆军联合演习。</p><p>该陆基导弹发射系统由美国洛克希德马丁公司设计、原采用海军MK-41垂直发射系统，修改后用于陆基作战。值得一提的是，此次是这套新型陆基导弹系统首次在“第一岛链”亮相，中其程导弹的射程可达两千公里以上，因此被认为可达中国东南沿海地带及敏感的南海及台湾海峡区域。专家视此为对中国发出警示，传达美国在印太地区的军事防御能力。</p><p>美国陆军新闻稿亦指出，部署「堤丰」武器系统“目的是提升菲律宾的海上防御能力，同时强化美菲同盟的协同工作能力与战备”。</p><p>值得关注还有，军事专家表示，美方在美菲联演部属的系统，可应付中国各型导弹。例如战斧可攻击中国南方陆地、在南海的基地。如果美军必须在西太平洋或在南海跟解放军交战，美军会快速派出派遣部队到第一岛链上各岛屿，并在快速部队掩护下，设各型导弹基地，一方面去拦截中国可能对第一岛链上美国的各盟邦或伙伴国，乃至美军基地，甚至是第二岛链关岛等的设施的攻击。</p><p>针对美国的举动，中南海也随即释出高调反制信号，发布与古巴军事高层在北京有军事对话的消息，较劲意味十分浓厚，再次折射出当下美、菲、中在此区域的激烈角力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>20/04/2024 - 19:31</div><img src="https://s.rfi.fr/media/display/c0964f20-ff3a-11ee-b3ae-005056bf30b7/w:1280/p:16x9/Capture-2203.JPG"><p><strong>4月20日，美国国会众议院以360票对58票的两党投票结果通过了《21世纪以实力求和平法案》（H.R. 8038）。该法案包括多项国家安全优先事项，包括制裁伊朗、扣押被冻结的俄罗斯主权资产，以及一项可能导致在全美国范围内禁止使用TikTok的措施。该法案要求TikTok目前的中国所有者在一年内出售其股份，否则TikTok将面临禁令。其还将允许美国总统对俄罗斯和伊朗实施新的制裁。        </strong></p><div><p>美联社报导指，美国众议院共和党人此前决定将TikTok剥离问题作为一个更大的对外援助计划的一部分，这是拜登总统的优先事项，同时国会也广泛支持乌克兰和以色列等盟友。</p><p>由于民主党人和共和党人都对TikTok的所有者——字节跳动表示了国家安全方面的担忧，一项销售期限更短、为期六个月的独立法案在3月份以两党压倒性票数在美国众议院获得通过。</p><p>修改后的措施在周六以360票赞成、58票反对获得通过，经过谈判，美国参议院将把出售的期限延长至9个月，如果出售正在进行中，可再延长3个月。法律挑战可能会进一步延长这一期限。</p><p>这些修改似乎旨在消除一些参议员的顾虑，即原来的六个月出售期限可能太短。然而，这些修改是否足以获得参议院的批准仍是未知数，因为一些主要参议员已表示希望以更慢的速度通过TikTok剥离法案。</p><p>TikTok已表示，如果剥离法案得到通过，很可能会诉诸法庭，试图阻止法律的实施，并称这将剥夺TikTok在美国约1.7亿用户的宪法第一修正案权利。数月来，TikTok斥资极力游说反对相关立法，并推动该应用美国用户，其中许多是年轻人致电国会表示反对。但这种激烈的反击和干预激怒了国会山的立法者们，他们普遍担心北京对TikTok及其母公司的影响力，而很少有议员自己使用该平台。</p><p>TikTok发言人周六在一份声明中称：“不幸的是，众议院正以重要的对外和人道主义援助为幌子，再次强行通过一项禁令法案，该法案将践踏1.7亿美国人的言论自由权，摧毁700万家企业，并关闭一个每年为美国经济贡献240亿美元的平台”。</p><p>此外，该法案还包含美国众议院外交委员会主席麦考尔（Michael McCaul）所说的“国会多年来通过的最全面的制裁伊朗措施”。其将对接收与加工伊朗石油的港口和炼油厂实施制裁，并对参与去年失效的联合国对伊朗导弹禁运所涵盖的活动或参与伊朗导弹和无人机供应或销售的任何人实施制裁。该法案还将进一步限制向伊朗出口原产于美国的商品和技术。</p><p>与此同时，该法案还将授权行政当局扣押并向乌克兰转移在美国的被冻结的俄罗斯主权资产，以帮助乌克兰进行战斗和重建。美国众议院议长约翰逊（Mike Johnson）表示，他正考虑将这项名为《REPO法案》的措施作为对乌援助的一种方式。</p><p>拜登政府的高级官员也一直在与七国集团（G7）国家合作，探讨帮助乌克兰的新战略，这需要美国国会的批准。官员们告诉美国有线电视新闻网（CNN）称，被七国集团和欧盟冻结的俄罗斯央行资产绝大部分由欧盟持有，美国仅持有价值约50亿美元的资产。此外，该法案还将对哈马斯、巴勒斯坦伊斯兰圣战组织（杰哈德）和其他巴勒斯坦恐怖组织实施强制性制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCC.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E5%258E%258B%25E5%2580%2592%25E6%2580%25A7%25E9%2580%259A%25E8%25BF%2587tiktok%25E5%2589%25A5%25E7%25A6%25BB%25E7%259B%25B8%25E5%2585%25B3%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCC.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
