--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713624303000-->
-[以色列袭击伊朗时也袭击了叙利亚南部一个军事雷达阵地](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0)
+<!--1713651303000-->
+[谢锋在哈佛肯尼迪学院演讲遭活动人士当面抗议](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE)
 ------
 
-<div>19/04/2024 - 20:13</div><img src="https://s.rfi.fr/media/display/1ff7a568-fe78-11ee-b2b7-005056bfb2b6/w:1280/p:16x9/Syria%20Deraa.PNG"><p><strong>据叙利亚国防部和一个非政府组织称，周五（4月19日）黎明时分，以色列在袭击伊朗中部时，也袭击了叙利亚南部一个军事雷达阵地。        </strong></p><div><p>叙利亚国防部在一份声明中说："2:55（格林尼治标准时间 23:55）左右，敌人以色列使用导弹（......）对我方在南部地区的防空地点发动了袭击"。叙利亚国防部补充说，袭击造成了"物质"损失，未提及是否有人员伤亡。</p><p>总部设在英国的非政府组织叙利亚人权观察站（OSDH）则报告说，"以色列袭击的目标是德拉（Deraa）省的一个叙利亚军队雷达阵地，该阵地探测到以色列飞机进入叙利亚领空"。</p><p>这个在叙利亚拥有庞大消息网络的非政府组织的负责人拉米-阿卜杜勒-拉赫曼（Rami Abdel Rahmane）对法新社说，袭击发生时，"以色列空军正在德拉地区上空密集飞行"，而叙利亚的防空部队并未采取行动。</p><p>自2011年叙利亚战争爆发以来，以色列军队在叙利亚发动了数百次袭击，特别针对亲伊朗团体。</p><p> "雷达阵地"   </p><p>当地网络媒体 “Suwayda 24” 的负责人马鲁夫（Rayan Maarouf）此前告诉法新社，该地区的"叙利亚军队雷达阵地遭到了袭击"，但他没有说明消息来源。</p><p>据报道，周五凌晨叙利亚遭空袭的时间几乎与伊朗中部听到巨大爆炸声的时间一致。据美国媒体援引美国高级官员的话说，那是以色列发动的袭击。</p><p>据伊朗官方法尔斯通讯社报道，德黑兰当局称，该国中部一个军事基地附近发生了三起爆炸。</p><p>伊朗官方通讯社伊斯兰共和国通讯社Irna表示，爆炸发生后“没有造成重大损失”的报告。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和致命无人机，以色列曾警告称将进行报复。在那次对以色列史无前例的袭击之前，伊朗驻大马士革领事馆遭到袭击，尽管以色列没有承责，但伊朗认为是以色列干的。</p><p>4月1日的袭击摧毁了伊朗领事馆，造成16人死亡，其中有7名伊朗伊斯兰革命卫队成员，包括两名高级军官。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E5%258F%2599%25E5%2588%25A9%25E4%25BA%259A%25E5%258D%2597%25E9%2583%25A8%25E4%25B8%2580%25E4%25B8%25AA%25E5%2586%259B%25E4%25BA%258B%25E9%259B%25B7%25E8%25BE%25BE%25E9%2598%25B5%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 22:56</div><img src="https://s.rfi.fr/media/display/7994c156-ff53-11ee-badb-005056a90284/w:1280/p:16x9/Capture-2207.JPG"><p><strong>4月20日，中国驻美大使谢锋在参加由哈佛大学肯尼迪政治学院举办的“中国会议”讲话时遭到至少三名在场活动人士的起立抗议，他的讲话也因此被打断。        </strong></p><div><p>据网络流传的视频及媒体报导显示，三名抗议者中两女一男，他们在谢锋站在讲台发言时分别起立抗议，高呼关注西藏、新疆人权状况及香港自由民主等议题的口号。这三人随后依次被现场身着西装的疑似安保人员及警察带离。其中一名女子在被带走时高呼“犯有灭绝种族罪”、“你手上沾有鲜血”等口号，另一男子质问谢锋：“中国政府直接违反了世界上所有的人权法，你怎么能在这里？”。他在被带出场时还称，“这是个自由的国家，你不能把你们的跨国镇压强加给这个国家”。第二名抗议女子在被带离时还提及台湾问题。</p>                <divid="em-WBMZ109396-RFI-CN-20240420"><blockquote><p>BREAKING: TIBETAN AND TAIWANESE HARVARD STUDENTS DISRUPT CHINESE AMBASSADOR TO THE U.S. XIE FENG&#39;S ADDRESS AT HARVARD<br><br>They called out his complicity in advocating for the genocide of Tibet and East Turkestan, destroying HK’s freedoms, and a military invasion of Taiwan. <a href="https://t.co/KrgHboOhol">pic.twitter.com/KrgHboOhol</a></p>&mdash; Students for a Free Tibet (@SFTHQ) <a href="https://twitter.com/SFTHQ/status/1781685309203190058?ref_src=twsrc%5Etfw">April 20, 2024</a></blockquote> <script async src="" charset="utf-8"></script><figcaption><span></span></figcaption></div><divid="em-WBMZ109395-RFI-CN-20240420"><blockquote><p>UPDATE: SFT ACTIVIST INTERRUPTS AMB. XIE AGAIN DURING TALK<br><br>SFT activist asked Xie how he could be at the Harvard Kennedy School of Government when the Chinese government is directly violating every human rights law in the world.<br><br>Again, the Ambassador was stunned into silence. <a href="https://t.co/B6Hkn0o0J9">pic.twitter.com/B6Hkn0o0J9</a></p>&mdash; Students for a Free Tibet (@SFTHQ) <a href="https://twitter.com/SFTHQ/status/1781717822550298683?ref_src=twsrc%5Etfw">April 20, 2024</a></blockquote> <script async src="" charset="utf-8"></script><figcaption><span></span></figcaption></div><p>据该活动网页介绍，“‘中国会议’利用哈佛大学肯尼迪学院的独特地位，汇聚了来自学术界、政府、商界和非营利部门的思想领袖。我们的目标是促进跨学科对话、跨部门合作和思想交流。今年，我们预计讨论的重要议题包括美中关系、全球宏观经济、人工智能、半导体产业、地缘政治、气候变化以及中国与其他发展中国家的关系”。除谢锋外，特邀发言人还包括肯尼迪政治学院的前院长格雷厄姆·艾利森（Graham Allison）等。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXD6.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E8%25B0%25A2%25E9%2594%258B%25E5%259C%25A8%25E5%2593%2588%25E4%25BD%259B%25E8%2582%25AF%25E5%25B0%25BC%25E8%25BF%25AA%25E5%25AD%25A6%25E9%2599%25A2%25E6%25BC%2594%25E8%25AE%25B2%25E9%2581%25AD%25E6%25B4%25BB%25E5%258A%25A8%25E4%25BA%25BA%25E5%25A3%25AB%25E5%25BD%2593%25E9%259D%25A2%25E6%258A%2597%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAXD6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAXD6.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXD6.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B0%A2%E9%94%8B%E5%9C%A8%E5%93%88%E4%BD%9B%E8%82%AF%E5%B0%BC%E8%BF%AA%E5%AD%A6%E9%99%A2%E6%BC%94%E8%AE%B2%E9%81%AD%E6%B4%BB%E5%8A%A8%E4%BA%BA%E5%A3%AB%E5%BD%93%E9%9D%A2%E6%8A%97%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
