--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
-<!--1713624302000-->
-[所罗门群岛总理索加瓦雷保住自己的议席 但能否组阁未定](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD-%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A)
+<!--1713651303000-->
+[中国海军成立75周年之际，美菲将举行迄今规模最大的「肩并肩」军演 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240420-%E4%B8%AD%E5%9B%BD%E6%B5%B7%E5%86%9B%E6%88%90%E7%AB%8B75%E5%91%A8%E5%B9%B4%E4%B9%8B%E9%99%85%EF%BC%8C%E7%BE%8E%E8%8F%B2%E5%B0%86%E4%B8%BE%E8%A1%8C%E8%BF%84%E4%BB%8A%E8%A7%84%E6%A8%A1%E6%9C%80%E5%A4%A7%E7%9A%84-%E8%82%A9%E5%B9%B6%E8%82%A9-%E5%86%9B%E6%BC%94)
 ------
 
-<div>20/04/2024 - 16:17</div><img src="https://s.rfi.fr/media/display/d8d5ea44-4be6-11ee-a27e-005056bfb2b6/w:1280/p:16x9/Vue%20aerienne%20du%20centre-ville%20d%27Honiara.JPG"><p><strong>所罗门群岛选举计票缓慢，选举负责人说，计票过程的公正性是首要任务，投票箱由警方严密保护。著名批评中国者，马莱塔省前省长再当选议员，他称人们试图将该省从“糟糕的领导和腐败”中拯救出来。        </strong></p><div><p>据路透社4月20日报道，周六获知的选举结果（临时）显示，所罗门群岛总理索加瓦雷（Manasseh Sogavare）保住了他自己在议会的席位，但他所在的所罗门群岛党能否组建下一届政府还需要数天时间来决定。</p><p>本周三所罗门群岛举行的全国大选是索加瓦雷在2022年与中国达成安全协议以来的首次大选，该条约拉近了这个太平洋岛国与中国政府的关系，这对地区安全构成潜在的影响，美国和澳大利亚表示担忧。</p><p>来自澳大利亚、新西兰、巴布亚新几内亚和斐济的警察及国防部队正在协助选举的安保工作。</p><p>由 50 名议员组成的议会的全部选举结果预计将于下周揭晓，届时将显示是否有政党获得多数席位，或者是否需要通过谈判组建联盟来推选总理。</p><p><strong>计票缓慢</strong></p><p>在以往的选举中，有大量独立候选人获胜，导致联盟不稳定。</p><p>所罗门群岛举行的全国和省级选举结果将在几天内公布。选举负责人贾斯珀-海伍德-阿尼西（Jasper Highwood Anisi）说，计票工作进展缓慢，但为维护公众信任，计票过程的公正性是首要任务，投票箱由警方严密保护。</p><p>官方结果显示，索加瓦雷在东乔伊瑟尔选区赢得了49%的选票，击败了联合党候选人戴维-库鲁苏（David Qurusu），后者获得42%的选票。</p><p>据广播公司 SIBC 周六报道，所罗门群岛民主党，前反对党领袖马修-瓦莱（Matthew Wale）保住了他在马莱塔省奥克（Aoke）的议席。</p><p><strong>“糟糕的领导和腐败”</strong></p><p>丹尼尔-苏伊达尼（Daniel Suidani）是该国著名批评中国的人，曾任人口最多的马莱塔省省长，直到去年在不信任投票中被赶下台。</p><p>官员们表示，丹尼尔·苏达尼(Daniel Suidani)已再次当选马莱塔省议会的议员。</p><p>作为省长，他曾禁止中国企业进入马莱塔这个所罗门群岛人口最多的省份，并接受美国的发展援助，但在去年因他拒绝承认中国而被议员投票罢免。</p><p>丹尼尔·苏达尼表示，他的胜利表明马莱塔选民希望看到政府发生变化。他对路透社表示：“他们（选民）正试图将该省从糟糕的领导和腐败中拯救出来”。他还表示，省议会的最终计票数字尚不清楚。</p><p>中国本月向马莱塔省派出了其在南太平洋的最高特使，与马莱塔省新任省长马丁-菲尼（Martin Fini）签署了一份谅解备忘录。但选举官员表示，这次菲尼已经失去了他在省议会的席位。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXB2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E6%2580%25BB%25E7%2590%2586%25E7%25B4%25A2%25E5%258A%25A0%25E7%2593%25A6%25E9%259B%25B7%25E4%25BF%259D%25E4%25BD%258F%25E8%2587%25AA%25E5%25B7%25B1%25E7%259A%2584%25E8%25AE%25AE%25E5%25B8%25AD-%25E4%25BD%2586%25E8%2583%25BD%25E5%2590%25A6%25E7%25BB%2584%25E9%2598%2581%25E6%259C%25AA%25E5%25AE%259A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A%20-%20https%3A%2F%2Frfi.my%2FAXB2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A%20-%20https%3A%2F%2Frfi.my%2FAXB2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXB2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 13:40</div><img src="https://s.rfi.fr/media/display/e98fc2f0-ff06-11ee-9e4b-005056bfb2b6/w:1280/p:16x9/a4b36f8e-0be8-4841-92e5-1998c81bd74e.png"><p><strong>中国海军成立75周年之际，美菲将举行史上最大规模的「肩并肩」（Balikatan）联合军演。这项一年一度的演习从4月22日起至5月10日结束，届时将约有16,700名军人参加，美方将出动11,000人，菲方将派出5000多人。他们将参加海上安全、空中和导弹防御、动态导弹打击、网络防御和信息作战等方面的训练。                    </strong></p><div><p>据路透社报道，负责这次演习的菲律宾陆军上校迈克尔·洛基科（Michael Logico）说，这将是首次在菲律宾领海之外进行的海上演习。他表示，美菲军人将模拟收复菲律宾最北端被敌方军队占领的岛屿。该岛屿位于面向南中国海的巴拉望省西部，靠近台湾，其中最北端的雅米岛距离台湾仅约140公里。</p><p>美菲军队「肩并肩」联演举行始于1991年，至今已经34个年头。在今年的年度演习中，法国军队将首次派出一艘护卫舰参加，与菲律宾和美国海军军舰在马尼拉南中国海内专属经济区联合巡航。这次由菲律宾、美国和法国海军联合举行的演习被视为历届「肩并肩」规模最大的一次。</p><p>但法国与菲律宾两国并没有签署「驻军地位协议」（SOFA），因此法军只能在菲律宾领海之外参加演习。</p><p>路透社指出，此次演习旨在提高美国和菲律宾两军之间的互操作性。此次演习是在中国最近在南中国海和台湾海峡频频采取咄咄逼人的行为的背景下进行的，而南中国海和台湾海峡是中美紧张关系的导火索。</p><p><strong>针对美菲军演 中国反对“威慑第三方”</strong></p><p>针对美菲计划中的演习，中国外交部已警告菲律宾应该“清醒地认识到”，“拉拢域外国家在南海炫耀武力、挑起对抗，只会加剧紧张局势，破坏地区稳定”。</p><p>据中央社援引中国军事问题专家曹卫东周六向媒体表示，反对菲律宾引进外国的军事力量威慑第三方，并说这已非单单保护菲律宾。</p><p>曹卫东说，美菲两国的军事关系是两国的事情，但中方反对的是军事关系针对第三方。中国与菲律宾是南海周边国家，存在岛屿主权与海上画线争端的问题。</p><p>曹卫东指，美国在菲律宾有5个基地，现在又有4个，其中3个在吕宋岛，“靠近我们的台湾地区”。并且又部署「堤丰武器系统」（Typhon Weapons System ），可搭载「战斧」（Tomahawk）巡戈导弹，加上「标准六型」（SM-6）导弹，这令台湾在「战斧」巡戈导弹的覆盖之下。</p><p>据他强调，中方因而要考虑，“这对台湾岛构成威胁”，还对广东等沿海构成威胁，离大陆的东南沿海城市也很近。如果将这种军事基地部署在菲律宾，无论是对台湾还是中国大陆，“都是安全上的威胁”。</p><p>曹卫东又说，中方坚决反对这样的演习，因为威胁其他国家。除此之外，美菲演习扩大，向外海推进，并且是在美国与俄罗斯撕毁「中导条约」后，第一次在境外部署陆基中程弹道导弹，射程在500公里至5500公里，“部署在我们家门口”，对中国的意图是非常明显。</p><p>至于19日共军成立信息支持部队，曹卫东仅表示，这与编制体制有关，这种改变还是对未来讯息条件下的军事任务有关。</p><p><strong>美军新型陆基导弹首度登上第一岛链</strong></p><p>另据美国《海军新闻》15日消息称，美国陆军的新型陆基导弹发射系统最近在菲律宾北部部署，这套被称为「堤丰」（Typhon）武器系统的中程能力陆基导弹发射系统，正在参与为期两周的「坚盾-24」（Salaknib 24）美菲陆军联合演习。</p><p>该陆基导弹发射系统由美国洛克希德马丁公司设计、原采用海军MK-41垂直发射系统，修改后用于陆基作战。值得一提的是，此次是这套新型陆基导弹系统首次在“第一岛链”亮相，中其程导弹的射程可达两千公里以上，因此被认为可达中国东南沿海地带及敏感的南海及台湾海峡区域。专家视此为对中国发出警示，传达美国在印太地区的军事防御能力。</p><p>美国陆军新闻稿亦指出，部署「堤丰」武器系统“目的是提升菲律宾的海上防御能力，同时强化美菲同盟的协同工作能力与战备”。</p><p>值得关注还有，军事专家表示，美方在美菲联演部属的系统，可应付中国各型导弹。例如战斧可攻击中国南方陆地、在南海的基地。如果美军必须在西太平洋或在南海跟解放军交战，美军会快速派出派遣部队到第一岛链上各岛屿，并在快速部队掩护下，设各型导弹基地，一方面去拦截中国可能对第一岛链上美国的各盟邦或伙伴国，乃至美军基地，甚至是第二岛链关岛等的设施的攻击。</p><p>针对美国的举动，中南海也随即释出高调反制信号，发布与古巴军事高层在北京有军事对话的消息，较劲意味十分浓厚，再次折射出当下美、菲、中在此区域的激烈角力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
