--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713811509000-->
-[加国宜居城市榜单：巴黎摘欧洲榜眼 花都市府盛赞 - 法国生活](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E7%94%9F%E6%B4%BB/20240422-%E5%8A%A0%E5%9B%BD%E5%AE%9C%E5%B1%85%E5%9F%8E%E5%B8%82%E6%A6%9C%E5%8D%95-%E5%B7%B4%E9%BB%8E%E6%91%98%E6%AC%A7%E6%B4%B2%E6%A6%9C%E7%9C%BC-%E8%8A%B1%E9%83%BD%E5%B8%82%E5%BA%9C%E7%9B%9B%E8%B5%9E)
+<!--1713818703000-->
+[视频 全球军费开支猛增 美国中国位居榜首](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240422-%E8%A7%86%E9%A2%91-%E5%85%A8%E7%90%83%E5%86%9B%E8%B4%B9%E5%BC%80%E6%94%AF%E7%8C%9B%E5%A2%9E-%E7%BE%8E%E5%9B%BD%E4%B8%AD%E5%9B%BD%E4%BD%8D%E5%B1%85%E6%A6%9C%E9%A6%96)
 ------
 
-<div>22/04/2024 - 13:42</div><img src="https://s.rfi.fr/media/display/b0c4ad9c-f8c5-11ee-9cec-005056bf30b7/w:1280/p:16x9/AP24100374217300.jpg"><p><strong>加拿大知名国际公司——共振咨询，在4月19日，公布了今年的全球最佳城市榜单，在这一最适宜居住生活的城市排名榜中，巴黎名列第二，仅次于伦敦。                    </strong></p><div><p>哪么巴黎真的是欧洲最适宜居住的城市之一吗？根据加拿大共振咨询公司的最新排名，回答是肯定的。根据这项研究，法国首都仅次于英国首都伦敦之后，领先于德国首都柏林，是“欧洲第二宜居城市”。 在这份光彩夺目的报告中，这座“令人陶醉”的城市借举行2024奥运会之机，将以其“以世界前所未见的前瞻性城市改造”让全世界“惊叹不已”。</p><p>这家自称是旅游业、房地产业和经济发展领域“领先顾问”的加拿大公司，首先赞扬了巴黎市长伊达尔戈推行的市区自行车优先政策，即开发自行车专用车道，此外还对车辆的行驶速度进行严格限制。据这家加拿大公司称，这一政策获得了“公众的支持”。</p><p style="text-align:center"><strong>“让全世界羡慕”的地铁</strong></p><p>尽管近年来，在巴黎市区，对四轮代步车实施每小时三十公里的限速和巨额罚款的政策，引起了花都驾车者的不满，但发表榜单的咨询公司在自己的网站上解释说，希望将自己推出的这一排名榜单打造成为“世界上最可信城市表现的基本准则”，并称赞说“70%的巴黎人没有汽车，这一数字令人难以置信”，并且认为市政府为方便市民骑自行车而做出的“全面承诺”，使巴黎这座城市“跻身全球最合适骑自行车的城市之列”。</p><p>加拿大咨询公司指出，巴黎的“行人也受到同样的关爱”，并表示65%的巴黎人出行靠步行，“这一数字在2010至2020的十年间增加了12%”。至于巴黎的地铁，报告则进一步强调，法国首都的地铁网络“拥有800公里长和16条线路，且与郊区铁路系统完美结合方便出行，已经让全世界羡慕不已”。</p><p style="text-align:center"><strong>“一个包容、关爱的城市”</strong></p><p>当加拿大公司宣布今年的榜单后，巴黎市政厅在自己的社交网络账户上表态说：对巴黎在榜单上名列前茅感到高兴。市府满意地表示，在“城市创新、应对新的气候挑战而设计的各种实施、为行人和替代交通工具的重视、文化活动的多样性、及其国际形象”等方面，巴黎“可说是一骑绝尘”。</p><p>巴黎市府强调，“为了方便行人，大大减少了停车位的数量”，这使得城市更加宁静”，且改善了“公共交通的服务”，特别是“为行动不便者提供可乘坐的公交汽车线路”。市府最后还总结说：这是“因为一个宜居的城市也是一个包容和关爱的城市”。</p><p>不过，这一观点与在法国首都居民中开展的民意调查结构形成了一定的反差。2023年，法国民调机构IFOP为右派全国性大报《费加罗报》进行的独家调查显示，在下一届市政选举举行的前三年，只有26%的巴黎人表示，他们对现任市长伊达尔戈 (Anne Hidalgo) 治理下的花都生活感到“非常满意”，而她的前任德拉诺埃主理巴黎事务时，任职中期的民调显示这一比例高达41%。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E5%A8%83/" title="艾娃">艾娃</a></div></div></div></div>
+<div>22/04/2024 - 14:27</div><img src="https://s.rfi.fr/media/display/4971a2ec-009c-11ef-b9e2-005056bf30b7/w:1280/p:16x9/depense%20militaire.JPG"><p><strong>全球军费开支2023年达到创纪录  6.8% 是自2009年以来最高年度增幅，美国是世界上最大的武器消费国，中国紧随其后，请看France24视频报道。        </strong></p><div><p>全球军火工业发展增长势头强劲，根据斯德哥尔摩国际和平研究所调查显示2023年全球军费开支将达到创纪录增长达到2.4万亿美元，以 6.8% 成为自2009年以来的最高年度增幅。</p><p>斯德哥尔摩国际和平研究所研究员天楠指出，在欧洲中东和非洲有强劲的增长 。当然就欧洲而言俄罗斯入侵乌克兰战争导致欧洲军费开支猛增。</p><p>事实上俄罗斯和乌克兰购买的武器比 2022 年更多， 莫斯科增加了 24%，基辅军费预算增加了 51%。</p><p>由于乌克兰获得了援助特别是美国人方面的帮助，乌克兰军队的开支相当于俄罗斯军队的91%。</p><p>本次 斯德哥尔摩国际和平研究所调查报告中的另一点是美国是世界上最大的武器消费国，军费开支为 9160 亿美元 。</p><p>其次是中国，中国在 2023 年的花费也更多，引发其亚洲竞争对手也增加了武器的购买量。</p><p>亚洲和大洋洲地缘政治局势持续紧张，尤其是中国台湾和日本之间局势紧张是主要原因。就是中国增加了支出，这对邻国从日本到东南亚都产生了相当大的影响 这导致了行动-反应型的螺旋式上升。</p><p>最后在中东地区，军费增长了 9% 主要原因是以色列在加沙发动了大规模军事进攻。</p><p>以色列军队的预算去年增加了24%达到275亿美元。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXRv.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240422-%25E8%25A7%2586%25E9%25A2%2591-%25E5%2585%25A8%25E7%2590%2583%25E5%2586%259B%25E8%25B4%25B9%25E5%25BC%2580%25E6%2594%25AF%25E7%258C%259B%25E5%25A2%259E-%25E7%25BE%258E%25E5%259B%25BD%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BD%258D%25E5%25B1%2585%25E6%25A6%259C%25E9%25A6%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E5%85%A8%E7%90%83%E5%86%9B%E8%B4%B9%E5%BC%80%E6%94%AF%E7%8C%9B%E5%A2%9E%20%E7%BE%8E%E5%9B%BD%E4%B8%AD%E5%9B%BD%E4%BD%8D%E5%B1%85%E6%A6%9C%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAXRv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E5%85%A8%E7%90%83%E5%86%9B%E8%B4%B9%E5%BC%80%E6%94%AF%E7%8C%9B%E5%A2%9E%20%E7%BE%8E%E5%9B%BD%E4%B8%AD%E5%9B%BD%E4%BD%8D%E5%B1%85%E6%A6%9C%E9%A6%96%20-%20https%3A%2F%2Frfi.my%2FAXRv.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXRv.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E5%85%A8%E7%90%83%E5%86%9B%E8%B4%B9%E5%BC%80%E6%94%AF%E7%8C%9B%E5%A2%9E%20%E7%BE%8E%E5%9B%BD%E4%B8%AD%E5%9B%BD%E4%BD%8D%E5%B1%85%E6%A6%9C%E9%A6%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
