--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713771902000-->
-[日本海上自卫队两架直升机坠毁 1人死亡 7人失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81-1%E4%BA%BA%E6%AD%BB%E4%BA%A1-7%E4%BA%BA%E5%A4%B1%E8%B8%AA)
+<!--1713811509000-->
+[加国宜居城市榜单：巴黎摘欧洲榜眼 花都市府盛赞 - 法国生活](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E7%94%9F%E6%B4%BB/20240422-%E5%8A%A0%E5%9B%BD%E5%AE%9C%E5%B1%85%E5%9F%8E%E5%B8%82%E6%A6%9C%E5%8D%95-%E5%B7%B4%E9%BB%8E%E6%91%98%E6%AC%A7%E6%B4%B2%E6%A6%9C%E7%9C%BC-%E8%8A%B1%E9%83%BD%E5%B8%82%E5%BA%9C%E7%9B%9B%E8%B5%9E)
 ------
 
-<div>21/04/2024 - 10:53</div><img src="https://s.rfi.fr/media/display/da16e712-ffbb-11ee-8eda-005056bfb2b6/w:1280/p:16x9/Capture-2208.PNG"><p><strong>日本自卫队两架直升机周六（4月20日）晚间在训练时坠毁，造成一名机上人员死亡，另有七人失联。日本防卫大臣木原稔（Minoru Kihara）周日说，“发现飞行记录仪的位置非常接近"，因此"（两机）相撞的可能性高"。        </strong></p><div><p>木原稔向媒体说，失事飞机当时正在参加 "夜间反潜战演习"。目前，尚不清楚事故的原因，当务之急是拯救生命。他说，海上救援部门发现了可能是两部直升机的残骸。</p><p>他在几小时后再次通报，"稍早获救的一名队员已确认死亡，其他七人仍下落不明。” 他说，两部飞行记录仪被发现的位置非常接近"，因此"（两机）很可能相撞”。</p><p>这两架直升机在伊豆群岛海岸执行反潜训练时在当地时间晚10点38分后先后失联，NHK 报道，两机失联时间相差约25分钟，日本海上自卫队表示，正在分析已回收的飞行记录仪，并对参加训练但未出事故的第三架直升机人员进行询问。</p><p>两架直升机是日本三菱制造的SH-60K巡逻直升机，隶属于海上自卫队。</p><p>法新社报道，一年前，一架另一型号的日本军用直升机（UH-60JA）在冲绳海域坠毁，机上十人遇难。11月，驻日美军的一架 "鱼鹰 "直升机坠海，造成8 名机组人员全部遇难。</p><p>此次事故促使美军展开调查，并在全球全面停飞其鱼鹰式飞机，为期三个月。在经过美军对飞机的维护和程序修改后，鱼鹰飞机的飞行3月初恢复，包括在日本的飞行。</p><p>报道指，作为美国密切盟友，日本正大幅增加国防预算，以应对亚太地区日益紧张的局势，包括中国日益强硬的领土要求和朝鲜在该地区频频释出的威胁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXGK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E6%25B5%25B7%25E4%25B8%258A%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25B8%25A4%25E6%259E%25B6%25E7%259B%25B4%25E5%258D%2587%25E6%259C%25BA%25E5%259D%25A0%25E6%25AF%2581-1%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1-7%25E4%25BA%25BA%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXGK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>22/04/2024 - 13:42</div><img src="https://s.rfi.fr/media/display/b0c4ad9c-f8c5-11ee-9cec-005056bf30b7/w:1280/p:16x9/AP24100374217300.jpg"><p><strong>加拿大知名国际公司——共振咨询，在4月19日，公布了今年的全球最佳城市榜单，在这一最适宜居住生活的城市排名榜中，巴黎名列第二，仅次于伦敦。                    </strong></p><div><p>哪么巴黎真的是欧洲最适宜居住的城市之一吗？根据加拿大共振咨询公司的最新排名，回答是肯定的。根据这项研究，法国首都仅次于英国首都伦敦之后，领先于德国首都柏林，是“欧洲第二宜居城市”。 在这份光彩夺目的报告中，这座“令人陶醉”的城市借举行2024奥运会之机，将以其“以世界前所未见的前瞻性城市改造”让全世界“惊叹不已”。</p><p>这家自称是旅游业、房地产业和经济发展领域“领先顾问”的加拿大公司，首先赞扬了巴黎市长伊达尔戈推行的市区自行车优先政策，即开发自行车专用车道，此外还对车辆的行驶速度进行严格限制。据这家加拿大公司称，这一政策获得了“公众的支持”。</p><p style="text-align:center"><strong>“让全世界羡慕”的地铁</strong></p><p>尽管近年来，在巴黎市区，对四轮代步车实施每小时三十公里的限速和巨额罚款的政策，引起了花都驾车者的不满，但发表榜单的咨询公司在自己的网站上解释说，希望将自己推出的这一排名榜单打造成为“世界上最可信城市表现的基本准则”，并称赞说“70%的巴黎人没有汽车，这一数字令人难以置信”，并且认为市政府为方便市民骑自行车而做出的“全面承诺”，使巴黎这座城市“跻身全球最合适骑自行车的城市之列”。</p><p>加拿大咨询公司指出，巴黎的“行人也受到同样的关爱”，并表示65%的巴黎人出行靠步行，“这一数字在2010至2020的十年间增加了12%”。至于巴黎的地铁，报告则进一步强调，法国首都的地铁网络“拥有800公里长和16条线路，且与郊区铁路系统完美结合方便出行，已经让全世界羡慕不已”。</p><p style="text-align:center"><strong>“一个包容、关爱的城市”</strong></p><p>当加拿大公司宣布今年的榜单后，巴黎市政厅在自己的社交网络账户上表态说：对巴黎在榜单上名列前茅感到高兴。市府满意地表示，在“城市创新、应对新的气候挑战而设计的各种实施、为行人和替代交通工具的重视、文化活动的多样性、及其国际形象”等方面，巴黎“可说是一骑绝尘”。</p><p>巴黎市府强调，“为了方便行人，大大减少了停车位的数量”，这使得城市更加宁静”，且改善了“公共交通的服务”，特别是“为行动不便者提供可乘坐的公交汽车线路”。市府最后还总结说：这是“因为一个宜居的城市也是一个包容和关爱的城市”。</p><p>不过，这一观点与在法国首都居民中开展的民意调查结构形成了一定的反差。2023年，法国民调机构IFOP为右派全国性大报《费加罗报》进行的独家调查显示，在下一届市政选举举行的前三年，只有26%的巴黎人表示，他们对现任市长伊达尔戈 (Anne Hidalgo) 治理下的花都生活感到“非常满意”，而她的前任德拉诺埃主理巴黎事务时，任职中期的民调显示这一比例高达41%。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E5%A8%83/" title="艾娃">艾娃</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
