--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713748503000-->
-[宪政制度的故乡英国 诗人参孙弥尔顿之二  啼声初试 - 欧洲思想文化长廊](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%AC%A7%E6%B4%B2%E6%80%9D%E6%83%B3%E6%96%87%E5%8C%96%E9%95%BF%E5%BB%8A/20240421-%E5%AE%AA%E6%94%BF%E5%88%B6%E5%BA%A6%E7%9A%84%E6%95%85%E4%B9%A1%E8%8B%B1%E5%9B%BD-%E8%AF%97%E4%BA%BA%E5%8F%82%E5%AD%99%E5%BC%A5%E5%B0%94%E9%A1%BF%E4%B9%8B%E4%BA%8C-%E5%95%BC%E5%A3%B0%E5%88%9D%E8%AF%95)
+<!--1713771902000-->
+[日本海上自卫队两架直升机坠毁 1人死亡 7人失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81-1%E4%BA%BA%E6%AD%BB%E4%BA%A1-7%E4%BA%BA%E5%A4%B1%E8%B8%AA)
 ------
 
-<div>21/04/2024 - 23:24</div><img src="https://s.rfi.fr/media/display/647ce2f6-fab4-11ee-b2ed-005056bf30b7/w:1280/p:16x9/maxresdefault-81.jpg"><p><strong>「提要」 胸怀抱负要成为一位伟大诗人的弥尔顿(John Milton (1608 - 1674)自剑桥毕业后返回故园，在霍顿村隐居五年。在此期间，他潜心苦读，尽一切可能丰富自己，并开始初试新声，创作了自己第一批诗作。                    </strong></p><div><p>问：弥尔顿似乎天生就要做诗人。</p><p>答；这是个事实，而且似乎是命中注定，连他自己都这么想这么说。他说：“有一种内心的激情日益引起我的关注，凭借我苦心孤诣的研读，加上天生强烈的酷爱，我或许给后世留下些东西，让后人不会轻易遗忘，这是我人生在世的天职”。这段话明确表明他的志向和对自己能力的确信，他要给后世留下不会湮灭的精神财富。毫无疑问，这个愿望已经实现。更难得的是，他明确告诫自己，诗如其人。他说：“我深信，若有谁希望用写作歌颂一切美善之事，那他自己内心必具备一切有关美善之物的经验的实践，否则他何敢唱出赞颂伟人和名都之歌？”马克·帕提森总结弥尔顿创作的三大法宝和源泉，那就是知识、道德感和宗教情怀。帕提森认为，他要获取一切知识，却不单为知识而知识，他拥有知识为的是从中获得智慧，这些智慧将和他道德上的完善携手并进，诗人的灵魂应该兼有善良、明智、正义和完美的形式。还有，神的启示来自弥尔顿对上帝的坚信。弥尔顿自己说，诗的灵感，“除了虔诚的祷告那永生的圣灵之外是不可能得到的，因为只有圣灵给诗人词语和知识，使诗人的表达丰富多彩”。</p><p>问：这三个法宝可以当作理解弥尔顿作品的指南。</p><p>答：是的。刚回到霍顿田庄，弥尔顿就作了两首表达自己心境和追求的诗。《快乐的人》和《沉思的人》。《快乐的人》一诗，淋漓尽致地表达了他青春洋溢，光明向上的心情。那时弥尔顿初尝知识之果，前面还有无限丰富的精神宝藏要去探索。诗中用希腊罗马神奇的形象，引人进入一个充满活力的田园世界，它其实就是弥尔顿生活、幽居的霍顿乡村景色。那里云雀飞鸣、晨曦初起，窗棱上野蔷薇怒放，葡萄藤曼缠绕，雄鸡高唱，猎犬吠吠，农夫扶犁耕种，挤奶的女郎轻声歌唱，悠扬的提琴声伴随一群青年男女在树荫下舞蹈，诗人沉浸在一片欢乐之中。但是诗人提醒自己，不能让世俗生活宜人的慵懒虚耗光阴，诗人惊醒：“闪开吧，空虚哄人的欢欣/你是愚蠢所生，没有父亲，无法满足一颗执着的心/对于它，你的玩意儿不值几文/你只能呆在闲散人的头脑里/空想各种愚蠢无聊的东西/五颜六色、繁杂缤纷/好像太阳光线中浮游的微尘”。诗人要摆脱那些浅薄无聊的快乐，深入精神的洞府，去研究赫耳墨斯和柏拉图的著作，去探究生成宇宙的元素，去翻读希腊悲剧，去钻研阿伽门农家族的英雄传说，他要续写乔叟未完成的故事，继续讲述成吉思汗的传奇，甚至要把塔索、斯宾塞这些大诗人唤来，一较高低。在这个学习探索的过程中，诗人成为了一个沉思的人。</p><p>问：弥尔顿二十岁刚出头，他对生活的体验和思考已经相当完整了。</p><p>答；是的。《快乐的人》和《沉思的人》这两首诗，可以说已经给弥尔顿一生勾勒了一个轮廓。他的一生就是从一个快乐的人变成一个沉思的人，而这个沉思的人又使他成为了一个战斗的人。不过在他心灵深处还隐藏着一个渴望，那就是对音乐的热爱。他写了一首诗《在神圣的音乐声中》，他表达的意向是天上的乐曲，由正义的精灵佩戴着胜利的棕榈冠，永无休止地歌唱。我们人类曾经在地上应和这些天籁，但是悖谬的罪行用刺耳的噪音破坏了这种自然的和声。诗人盼望人们能够恢复这些音乐，使天上的仙乐配合地上的人生，与造物主一起歌唱。这是他心中的一个至高的理想。似乎是为了实现弥尔顿心中的这个渴望，他和一位朋友、作曲家亨利·劳斯合作，创作了一部音乐诗剧《科马斯》。弥尔顿写诗，劳斯谱曲，这部诗剧是描写酒神巴库斯的儿子科马斯以毒酒诱骗旅人，一旦人们喝下这毒酒，立即变成豺狼野兽的嘴脸，但这些喝了毒酒的人迷了心窍，对自己变成野兽的相貌欣赏不已，他们忘掉一切家人朋友，只盯着食槽放纵口腹。从一个正常人变成一个狰狞丑陋、只知吃喝自以为荣的下贱东西。科马斯施行这种巫术，专找孩子下手，他瞄上了一家姐弟三人。这部诗剧中有许多歌颂音乐的迷人的诗行，例如“由泥土塑成的凡人，怎能有/如此神圣的声音，摄人心魄/定有某种神圣之物在他胸中/销魂的歌曲震动四周的空气/他的肺腑中定隐藏着神圣的禀赋/迷人的歌声驾起静谧的翅膀/浮游过空灵夜色/每一节拍都抚摸着/乌黑的夜的羽毛”。</p><p>问：这诗句配上音乐，一定很美。</p><p>答：当然。只是现在人们只记住了弥尔顿的诗。科马斯扮作牧人去诱惑姐姐，但最终在两个弟弟和保护神的卫护下，转危为安。在弟弟和保护神的对话中，弥尔顿引用希腊哲学家的思想来宣扬他的理想，把复杂的哲学思考融入美丽的诗行。比如，“智慧常去寻找退隐中的宁静/在他最好的护卫沉思的伴随下/整理羽毛使翅膀生成美好/洁净的人心中自有光明/坐在地层中心也得享天光/但灵魂藏着黑暗和恶念的人/即便行走在正午的阳光下，也如黑暗，他自身就是自己的地牢”。这些诗句是对柏拉图哲学思想的诠释，那些地下的人就是柏拉图在《理想国》中描述的洞穴人。弥尔顿是一个非常珍视友谊的人，他在剑桥的好友爱德华·金不幸死于一场海难，弥尔顿为他写了一首哀婉动人的悼歌《黎西达斯》，这首诗的名字出自古罗马诗人维吉尔的《牧歌》。维吉尔是但丁《神曲》中的引路人，弥尔顿对这位大诗人很崇敬，所以借他诗歌中的一个人物当自己哀歌的名字。在维吉尔的《牧歌》第九首中，黎西达斯和他的朋友莫埃里一起上路，谈论着世事变迁。诗中莫埃里对黎西达斯说：“时光带走一切私人的经历，记得在儿时/我曾经常常以我的轻歌埋葬白日/而现在，这么多歌都忘了/我的歌喉也喑哑”。弥尔顿借维吉尔的诗来表达以往友朋之间欢聚的轻歌已不可再现，因为朋友已逝，他的歌喉也随之喑哑。弥尔顿在维吉尔的诗意中找到了自己要对朋友说的话。黎西达斯回唱道：“你的推辞更引起我渴慕的心情/看哪，海水都为你变得平静/所有絮语的风都停止了喧嚣”。维吉尔诗中的黎西达斯就是弥尔顿心中的爱德华·金。弥尔顿哀唱道：“黎西达斯死了，死于荣华岁月/他以波涛为灵床漂浮在水上/不该无人为他哀歌/哀伤的泪珠滚滚”。随后弥尔顿回忆他与金的友谊：“我们在同一小山上长大/放牧同一羊群，在泉边、泽畔和荫下/当高原的牧场还在朦胧/晨曦初上，我们就并肩出发”。诗中弥尔顿想象力汪洋恣肆，让黎西达斯也就是他的朋友金上天入地。天上的神灵列队迎候，他最终变成了海岸上的神灵，保护那些在大海中颠簸的人。诗的结尾是他的这位朋友又回到了故乡，与牧童、小溪、橡树唱和，用牧笛吹出温柔的曲调。在诗人的幻想中，他的朋友复活了：“他终于站起来，抖抖蓝色的斗篷”，而蓝色是希望的象征。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%89%B9%E7%BA%A6%E4%B8%93%E6%A0%8F%E4%BD%9C%E8%80%85-%E8%B5%B5%E8%B6%8A%E8%83%9C/" title="特约专栏作者:赵越胜">特约专栏作者:赵越胜</a></div></div></div></div>
+<div>21/04/2024 - 10:53</div><img src="https://s.rfi.fr/media/display/da16e712-ffbb-11ee-8eda-005056bfb2b6/w:1280/p:16x9/Capture-2208.PNG"><p><strong>日本自卫队两架直升机周六（4月20日）晚间在训练时坠毁，造成一名机上人员死亡，另有七人失联。日本防卫大臣木原稔（Minoru Kihara）周日说，“发现飞行记录仪的位置非常接近"，因此"（两机）相撞的可能性高"。        </strong></p><div><p>木原稔向媒体说，失事飞机当时正在参加 "夜间反潜战演习"。目前，尚不清楚事故的原因，当务之急是拯救生命。他说，海上救援部门发现了可能是两部直升机的残骸。</p><p>他在几小时后再次通报，"稍早获救的一名队员已确认死亡，其他七人仍下落不明。” 他说，两部飞行记录仪被发现的位置非常接近"，因此"（两机）很可能相撞”。</p><p>这两架直升机在伊豆群岛海岸执行反潜训练时在当地时间晚10点38分后先后失联，NHK 报道，两机失联时间相差约25分钟，日本海上自卫队表示，正在分析已回收的飞行记录仪，并对参加训练但未出事故的第三架直升机人员进行询问。</p><p>两架直升机是日本三菱制造的SH-60K巡逻直升机，隶属于海上自卫队。</p><p>法新社报道，一年前，一架另一型号的日本军用直升机（UH-60JA）在冲绳海域坠毁，机上十人遇难。11月，驻日美军的一架 "鱼鹰 "直升机坠海，造成8 名机组人员全部遇难。</p><p>此次事故促使美军展开调查，并在全球全面停飞其鱼鹰式飞机，为期三个月。在经过美军对飞机的维护和程序修改后，鱼鹰飞机的飞行3月初恢复，包括在日本的飞行。</p><p>报道指，作为美国密切盟友，日本正大幅增加国防预算，以应对亚太地区日益紧张的局势，包括中国日益强硬的领土要求和朝鲜在该地区频频释出的威胁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXGK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E6%25B5%25B7%25E4%25B8%258A%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25B8%25A4%25E6%259E%25B6%25E7%259B%25B4%25E5%258D%2587%25E6%259C%25BA%25E5%259D%25A0%25E6%25AF%2581-1%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1-7%25E4%25BA%25BA%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXGK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
