--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713746703000-->
-[泽连斯基：&quot;乌克兰不会成为第二个阿富汗&quot; 乌军在克里米亚击中一艘俄罗斯舰艇](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97-%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87)
+<!--1713753903000-->
+[泰媒：关注莫迪蝉联对世界的影响 - 曼谷专栏](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%9B%BC%E8%B0%B7%E4%B8%93%E6%A0%8F/20240421-%E6%B3%B0%E5%AA%92-%E5%85%B3%E6%B3%A8%E8%8E%AB%E8%BF%AA%E8%9D%89%E8%81%94%E5%AF%B9%E4%B8%96%E7%95%8C%E7%9A%84%E5%BD%B1%E5%93%8D)
 ------
 
-<div>21/04/2024 - 23:04</div><img src="https://s.rfi.fr/media/display/c78838b4-0022-11ef-82a5-005056bf30b7/w:1280/p:16x9/2024-04-03T120301Z_111254464_RC2YY6ARKUMI_RTRMADP_3_UKRAINE-CRISIS-FINLAND.JPG"><p><strong>在美国国会众议院通过对乌克兰新军事援助法案后，俄罗斯和乌克兰军队周日(4月21日）在重要城镇恰西夫亚尔（东部）附近发生激烈战斗；乌克兰宣称，乌军在克里米亚击中了一艘俄罗斯舰艇。乌克兰总统泽连斯基周日表示，美国新的援乌法案表明，乌克兰将不会成为第二个阿富汗。        </strong></p><div><p>法新社消息，俄罗斯国防部周日中午宣称，东部的博格达尼夫卡镇已“完全解放”，但乌克兰军队随后表示，俄军试图在空军的掩护配合下"改善战术局势"，但遭到乌克兰军队击退。</p><p>博格达尼夫卡是一个战前居民不足100人的小镇，距离俄罗斯军队的目标城镇恰西夫亚尔 (Chassiv Iar) 不到10公里。而恰西夫亚尔距离克拉马托尔斯克东南不到30公里，是顿涅茨克地区仍受乌克兰控制的主要城市，也是乌克兰军队重要的铁路和后勤枢纽。</p><p>另外，乌克兰周日宣称，乌克兰海军在克里米亚击中俄罗斯“科姆纳”号舰艇。负责公海救援（沉没潜艇或丢失货物）的科莫纳号是俄罗斯最老牌的军舰之一。</p><p>据多个军事网站称，“科姆纳”号于1915年下水，参加过两次世界大战，被认为是世界历史最久的仍可执行战斗任务的舰船。</p><p>乌克兰海军发言人普莱滕丘克表示，“科姆纳”号已经不再能执行任务。他说，“乌克兰还将继续进行打击行动，直到俄罗斯不再拥有船舰或离开吞并的克里米亚。</p><p>另据法新社消息，乌克兰总统泽连斯基周日接受美国全国广播公司频道采访，再次就美国众议院周六投票通过的美国对乌克兰援助计划表示，美国新的援乌法案表明，乌克兰将不会成为“第二个阿富汗”。</p><p>泽连斯基接受“会见新闻界”采访表示，“这项援助将增强乌克兰的实力，并向克里姆林宫发出强烈信号，表明乌克兰不会成为第二个阿富汗”。</p><p>泽连斯基称：“美国将与乌克兰站在一起，保护乌克兰人民并保护世界各地的民主。”</p><p>经过漫长而艰苦的谈判，美国众议院于周六通过了一揽子对外援助法案，其中包括向乌克兰提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>泽连斯基立即众院通过新的援乌法案表示欢迎称，"法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>泽连斯基在周日的访谈还表示，乌克兰部分部队已经“精疲力竭”，需要更换。但新的部队必须拥有装备。他表示，希望尽快为前线的士兵提供具体帮助。</p><p>美国国会众院通过的法案还需要经参议院通过并得到美国总统拜登的批准，然后才能开始向乌克兰运送军援。</p><p>法新社援引美国战争研究所在最新公告中警告称，这意味着这种援助“几周内不会开始影响前线战局”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25B8%258D%25E4%25BC%259A%25E6%2588%2590%25E4%25B8%25BA%25E7%25AC%25AC%25E4%25BA%258C%25E4%25B8%25AA%25E9%2598%25BF%25E5%25AF%258C%25E6%25B1%2597-%25E4%25B9%258C%25E5%2586%259B%25E5%259C%25A8%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E5%2587%25BB%25E4%25B8%25AD%25E4%25B8%2580%25E8%2589%2598%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E8%2588%25B0%25E8%2589%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 12:11</div><img src="https://s.rfi.fr/media/display/4849449a-fe0a-11ee-b04c-005056a97e36/w:1280/p:16x9/2024-04-19T022831Z_533302519_RC2D97AEAMAR_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>堪称全球最大规模的印度民主选举投票已于4月19日拉开序幕，结果将在六周后揭晓。外界普遍预料新德里现任执政班子有望再次胜选，继续对印度未来五年的政治方向、经济政策、社会文化以及国际关系产生重要影响。                    </strong></p><div><p>泰国媒体综合报道，印度选举委员会宣布于周五（19日）开始投票，在未来6周内，近10亿合格选民将通过分区分批投票，从各邦选出人民代表，组成国会下议院。这次投票将于6月1日结束，并于6月4日公布选举结果。</p><p>印度国会共 545 席，下议院由9.6亿合格选民直接投票产生 543 席（其中530 名来自各州，13 名来自联邦属地），凡赢得过半选票或达到272席的政党或阵营即可率先组阁。</p><p>这场选举在执政核心印度人民党（BJP）所领导的“国家民主联盟”（NDA）与反对派组成的“印度国家发展共融联盟” （INDIA）之间展开激烈角逐。到目前为止，现任总理莫迪（Narendra Modi）仍然是印度人民党的总理候选人，而拥有 24 个在野党的反对联盟尚未提名总理候选人，宣称有待选举结果出炉后再定。</p><p>印度为联邦共和国，行政权分为28个邦和7个联邦直辖区。中央行政部门规定 “总统”为国家最高领导人，管理国家事务的行政实权则由赢得大选的总理掌管。评论称，已连任两届的现任总理莫迪正在力拼争夺第三届蝉联，执政党胜选毫无悬念。莫迪有望继续治理这个拥有14亿人口的国家并将成为继印度首任总理尼赫鲁（Jawaharlal Nehru）之后又一位连续三届执掌国家政权的人。</p><p>莫迪近期在公开演讲时豪言由印度人民党领导的全国民主联盟将夺得400多个席位。根据印度TV-CNX 今年4月初公布的民意调查显示，印度人民党预计有望赢得342席，反对派则赢得 38 个席位。在2019年上届选举中，印度人民党赢得303席，最大反对派印度国大党（Indian National Congress）仅有52席。</p><p>分析称，印度人民党受欢迎的主要原因是具有印度教民族主义色彩的莫迪2014年上台后，在执政十年里通过履行对选民的承诺，赢得了人口占比最高的印度教（Hinduism）选民的支持。2019年，莫迪宣布废除克什米尔自治区特权；今年1月，莫迪前往曾经是印度教徒和穆斯林之间爆发冲突的地区---阿约提亚出席被视为印度民族主义象征的罗摩神庙祝圣仪式；今年3月，莫迪政府颁布新版公民法，授予印度教徒公民身份，同时认可2014 年 12 月前从邻国前往印度居住的人（穆斯林除外）。莫迪因此被批评歧视穆斯林，穆斯林在印度属于少数群体。</p><p>另一个因素是关乎民生大计的国家经济。印度经济在莫迪治下迅速成长，目前排名世界第五大经济体，国民生产总值（GDP）达3.7万亿美元，有望在2027年成为世界第三大经济体。莫迪政府在促进发展国家经济的同时，也为基本商品和服务提供价格补贴。尽管民调发现印度人民正遭遇年轻人就业困难、生活受到通货膨胀影响，对未来的经济前景感到担忧等问题，但假若对比反对派提出国家民主和宪法受到威胁等具有强烈政治性的意识形态问题，考虑到先前经济发展计划与印度大国目标愿景的延续性，这使得印度人民党在选举中更占明显优势。国际货币基金（IMF）预测印度今明年经济成长率分别为6.8%、6.5%，超过对中国经济同期增长的预测。</p><p>印度大选备受国际关注。除了印度是“世界上最大的民主国家”外，更因为印度是世界上人口最多的国家，年轻人占比高。印度股市资本总值超过4万亿美元。去年12月超越香港，成为全球第四大股市。作为一个时代的经济明星，印度有望成为推动全球经济的关键参与者，同时也是在世界政治中发挥更大作用的国家。</p><p>另就印度与中国平衡力量的作用而言，西方国家对印度寄予更多的关注和期待。分析指出，在过去的一年里，印度与西方国家建立了更深层次的联系。莫迪的连任势必持续加强美国和印度之间的关系。华盛顿政府继续鼓励美国公司将其电子和技术制造业务从中国转移到印度等友好国家，共同遏制中国不断扩大的经济影响力。</p><p>随着印度在全球地缘政治上扮演的角色越来越重要，印度多年来在安全问题和国际关系上的立场持续受到国际社会关注。莫迪政府此前加入了与美国、日本、澳大利亚联手的“印太战略” （Indo‐Pacific），建立了四方安全对话机制（The Quad），积极参与印度洋地区国际事务，致力重竖“南方国家领袖”威望，最近更是罕见就南海领土纠纷问题表态，呼应支持美国“自由开放的印度-太平洋”主张，进一步扩大了与中国在领土、经济领域的对抗。时值当前跟印中毗邻的缅甸一步步陷入战乱，东南亚国家对印中两国联手化解缅甸危机抱以悲观态度。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9B%BC%E8%B0%B7%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E6%B1%9F%E6%9E%AB/" title="曼谷特约记者 江枫">曼谷特约记者 江枫</a></div></div></div></div>
