--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713746702000-->
-[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
+<!--1713748503000-->
+[重庆燃气费暴涨事件-国民是否应为财政危机埋单？ - 微言微语](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%BE%AE%E8%A8%80%E5%BE%AE%E8%AF%AD/20240421-%E9%87%8D%E5%BA%86%E7%87%83%E6%B0%94%E8%B4%B9%E6%9A%B4%E6%B6%A8%E4%BA%8B%E4%BB%B6-%E5%9B%BD%E6%B0%91%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E8%B4%A2%E6%94%BF%E5%8D%B1%E6%9C%BA%E5%9F%8B%E5%8D%95)
 ------
 
-<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 12:20</div><img src="https://s.rfi.fr/media/display/405e895e-3298-11ee-8ffc-005056a90321/w:1280/p:16x9/Photo%204%20ter%20village%20migrants.jpg"><p><strong>由央企华润控股的重庆燃气公司近日成为中国舆论焦点，起因是四月份以来，众多重庆成都用户投诉自从更换燃气表后，燃气费突然异常飙升，甚至有人停用燃气，燃气表仍在转动，有用户晒出6000元的离谱账单。重庆燃气公司在七千多用户投诉的压力下展开调查，承认有问题，声明启动退款行动。然而社交平台对该公司的声明并不买账，指该公司涉嫌犯罪应启动刑事调查，网民在议论的同时指责政府正用任意提高公共服务费的方式向国民转嫁财政危机。                    </strong></p><div><p>网友@荣剑发帖说：重庆燃气公司利用换煤气表，多收市民的钱，经众多市民举报，现在被坐实。这个事情的性质犹如盗贼偷窃别人的钱被抓，处理结果却是退钱了事。难道盗贼偷钱也可以用退钱而免于被法律追责吗？</p><p>网友@祥松谈发帖说：经过相关部门的协商，重庆的燃气表竟然真的减缓了运转速度！工作人员无需亲自进入居民家中，便能实现这一调整，大概是通过远程操控技术实现。重庆燃气明明是有组织的刑事犯罪，咋能退钱就完事，现在调查初步结果出来了，重庆燃气在燃气计量上存在重大问题，好比是1方燃气买出3方的钱，让许多用户燃气费用超出平时2～3倍，最高甚至超出正常用气量10倍。让重庆586万家用户叫苦不已，而重庆燃气利润却同比增加824%。燃气公司人均年收入达到21万。无论重庆燃气采取加压还是降低燃气浓度，或者更改气表结构等方式，把1方燃气变成了3方卖给用户，都是犯罪行为，而且这种事需要周密计划多方协同，根本不是一两个人能干成的，需要公司上下全力配合才能干成，尤其涉案金额巨大，</p><p>危及民生，社会危害极大，比市场小贩用七两秤性质严重的多，属于严重的有组织刑事犯罪。在调查事实面前，重庆燃气公司拒不认帐的底气没了，想退钱了事，但既然是有组织的刑事犯罪，咋能退钱就完了。更严重的是，近几年全国多地都出现燃气费用不明猛涨，加重民生困难的情况，显然重庆燃气不是第一家，肯定也不是最后一家这么干的黑心企业。</p><p>网友@桂哥猎手发帖说：某某燃气事件是犯罪，准确的说是诈骗罪且金额巨大，绝不能退钱就了事。如果退钱就了事，那么犯罪成本就是零。退钱了事是懒政、是腐政、是混蛋政！必须对相关部门、公司企业及责任人严肃追责。该撤的撤、该罚的罚、该关的关！法律不容模糊、权利与资本不能凌驾法律之上！</p><p>网友@bows_bob9694发帖说：燃气公司是国营大公司，垄断整个行业，什么违法乱纪的事情都敢做。如此难道不是抢劫性的流氓手段吗？网友@余英发帖说：供电公司、自来水公司、煤气公司等都是代表政府服务和收费的，不应该有损政府的高大形象 。网友@Bruce Mok发帖说：国有资本掌控的都在涨价，比如水电油，烟草等..通胀..民间资本掌控的都在降价，利润就业大减，供大于求..通缩…一胀一缩，统称通杀。</p><p>网友@TheXiangYang发帖说：……川渝地区此次事件背后的同一燃气公司是四川联发，其股东包括四川川港燃气和成都燃气集团。他们背后的股东，是华润燃气投资（中国）有限公司。到了华润这一级，就算查到钢板了。中国四大财阀集团：中信、保利、招商、华润。其实，多数参与民生基础服务的央企国企子公司都是亏损经营的。而之所以能够维持盈利，是因为</p><p>它的钱在别的地方有巨大收益，当然还有大额的国家财政补贴。而地方政府的财政收入，主要来源于税收和卖地。现在时代变了，税收收归国库，由中央统一调配，这几年习近平三令五申要“勒紧裤腰带过日子”，因此，下发到各省市的财政补贴肯定就少了。拿到的补贴少了，房子不好卖，土地出让金规则的更改，使得地方国企央企的日子也不好过了。为什么许多地方公交车停运了，因为上面没有财政补贴了。为什么水电燃油都在涨价，因为提供民生基础服务的央企，要亏损不起了。再不挣钱，行长爷爷的孙子、局长爸爸的儿子、副市长的老婆老妈，就真的要和月薪三千块的打工人一样，过苦日子了。</p><p>网友@庚白星君发帖说：……公共服务费上涨，最先抬高的就是大家的生活成本。在这个工作难找、工资不涨的节骨眼，生活成本若是提高，那么消费降级才是大家的第一选择。大家因为公共服务费上涨而不敢消费，整个社会的消费总需求下降。最难受的还是夹在中间的店家——一边是上涨的成本，不涨价就难以获利存活下去。一边是克制消费的消费者，需求减少，商品难以卖出去。最终的结果，除了苦苦支撑，就是关门止损。一波关门潮可能要来了，紧随其后的，还有降薪潮和裁员潮。</p><p>网友@文昭談古論今发帖说：除了川渝的“智能燃气表”爆表，又有更多网民报告，水表电表都有同样的问题。比如重庆、郑州都有网民反馈，装了新水表之后，就自己跳字，不用也产生费用，你不消费也被消费。所以拉动消费的新三件成了：电表、水表和气表。又称新“三个代表”。当然拉动消费只是戏称，其</p><p>实是割韭菜的新境界——破坏度量衡。这是萧条岁月基于权力，社会分摊损失的过程：权力越弱者</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div>
