--- a/articles/rfi/999970.md
+++ b/articles/rfi/999970.md
@@ -1,5 +1,5 @@
-<!--1713712501000-->
-[布林肯访华谈关切议题 美众院通过了援乌的新方案 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240421-%E5%B8%83%E6%9E%97%E8%82%AF%E8%AE%BF%E5%8D%8E%E8%B0%88%E5%85%B3%E5%88%87%E8%AE%AE%E9%A2%98-%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E4%BA%86%E6%8F%B4%E4%B9%8C%E7%9A%84%E6%96%B0%E6%96%B9%E6%A1%88)
+<!--1713746705000-->
+[311比112 美国会众议院通过608亿美元援乌法案](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-311%E6%AF%94112-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87610%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88)
 ------
 
-<div>21/04/2024 - 12:43</div><img src="https://s.rfi.fr/media/display/1e80ac62-1303-11ea-bdea-005056a99247/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>美国国务卿布林肯即将访华的消息普遍受到周日法国媒体的关注，费加罗报强调出，美国国务卿此行特别想在北京提出中国支持俄罗斯国防工业的问题。另外，世界报驻华盛顿记者Piotr Smolar指出，历经六个月的僵局后，美国众议院周六最终通过了对乌克兰的新金援方案。                    </strong></p><div><p>费加罗报写道，据一位美国官员称，布林肯将于 4 月 24 日至 26 日访问中国，他打算在北京直接提出他对中国政府支持俄罗斯国防工业的关切。</p><p>华盛顿承认中国没有向俄罗斯提供直接军事援助，但谴责中国输出军民两用材料，用于生产俄罗斯在对乌克兰战争中使用的弹药和武器。</p><p>周五在意大利举行的新闻发布会上，美国国务卿指责中国间接“助长”了乌克兰冲突，布林肯说：“如果中国一方面希望与欧洲和其他国家保持友好关系，另一方面就不能助长冷战结束以来对欧洲安全的最大威胁。”</p><p><strong>分歧的主要来源--台湾</strong></p><p>报道接着援引一位美国官员说，布林肯还将要求中国在下个月台湾当选总统赖清德的就职典礼上避免采取 "挑衅 "措施。台湾是分歧的主要根源，中国抗议美国向台北出售武器，而美国则抱怨北京打算改变台湾现状。</p><p>此举标志着中美紧张局势的进一步缓和，这种紧张局势在前总统特朗普执政期间曾一度加剧，如果他在 11 月的大选中获胜，他将再次承诺对中国政府采取强硬立场。但乔-拜登总统在寻求加强世界两大经济体之间的稳定的同时，也不断施加压力。</p><p>在布林肯访华之前的几天里，拜登与日本和菲律宾这两个对中国野心保持警惕的美国盟国的领导人举行了联合会晤，并提议对不配合的中国提高钢铁关税。一位美国高级官员在周六宣布布林肯访问之前对记者说：“我们现在的情况与一年前不同，当时双边关系正处于历史最低点。我们已经着手稳定双边关系，同时不牺牲我们加强联盟、激烈竞争和捍卫自身利益的能力。”</p><p><strong>途经上海</strong></p><p>此外，报道指出，作为两国关系缓和的标志，布林肯将在北京之前在大都市上海停留，他打算在那里鼓励加强美中两国之间的文化联系。布林肯此行之前，拜登与习近平进行了电话交谈，美国财政部长耶伦也访问了中国。</p><p>去年 11 月，两国元首在旧金山附近会晤，努力使中美关系重回正轨，特别是重新建立最高级别的军事对话，并承诺合作打击芬太尼（一种在美国造成严重破坏的合成毒品）。</p><p>剥到最后提到，在史汀生中心高级研究员孙云看来，中国正面临经济复苏的困境，正在寻求绥靖。中国领导人“在现阶段没有办法对付他们眼中好战或破坏稳定的美国，他们也不准备赌美国会在经济上重新介入，但他们可以让美国保持沉默”。</p><p><strong>在美国，经过六个月的僵局之后，众议院通过了对乌克兰的新援助方案</strong></p><p>世界报驻华盛顿记者在提要中写道，周六表决的四个文本分别涉及对基辅、以色列和台湾的援助，以及对 TikTok 的禁令威胁。为了将这些单独的文本付诸表决，共和党籍议长迈克-约翰逊（Mike Johnson）不得不克服自己阵营中一些当选议员的反抗。</p><p>在经历了六个多月的屡次失败、毫无结果的修版、共和党的封锁以及美国在全世界形象的灾难之后，美国众议院终于 4 月 20 日星期六通过了一项新的乌克兰援助计划。乌克兰现在比以往任何时候都更需要这项价值 608 亿美元（570 亿欧元）的援助计划，因为该国的弹药已经耗尽，而且在没有有效保护的情况下遭受俄罗斯的打击。</p><p>该文本以 311 票赞成、112 票反对获得通过，其通过率几乎与周六以蜗牛般速度通过的其他三项草案一样轻松。它们都与美国的外交政策及其资金来源有关。这一结果让乌克兰的支持者们松了一口气，他们不想让克里姆林宫以美对乌放弃和抛弃的方式获得胜利。但这也说明了共和党少数派代表“让美国再次伟大”运动数月来对国会的挟持。</p><p>世界报驻美记者表示，正如您可能已经猜到的那样，两党中赞成向乌克兰提供军事支持的人占了绝大多数，但这却成了“大老党”内部混乱的牺牲品。众议院议长约翰逊无视其同党共和党激进派的批评，才最终让这一多数派表达了自己的意见。</p><p>美国总统拜登在一份声明中说：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界上的领导力发出了明确的信息。世界报指出，这位民主党总统呼吁参议院尽快确认该方案（投票定于 4 月 23 日进行）以便他能签署该方案。</p><p>乌克兰总统泽连斯基则在 X 平台上对所有为“让历史走上正轨”做出贡献的人表示“感谢”。他补充说：“众议院今天通过的至关重要的美国援助法案将防止战争蔓延，拯救成千上万人的生命，并帮助我们两国变得更加强大。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/68fcb402-ff3f-11ee-a91e-005056bfb2b6/w:1280/p:16x9/Capture-2205.JPG"><p><strong>4月20日，美国国会众议院以311比112票通过了《2024年乌克兰安全补充拨款法案》（H.R.8035）。所有民主党议员都投了赞成票。共和党议员的赞成与反对投票几乎持平，101票赞成，112票反对，1票弃权。该法案通过时，民主党人和旁听席上的来宾欢呼雀跃。众议院议长约翰逊（Mike Johnson）警告说，在会场上挥舞旗帜是“违反礼仪”的行为。        </strong></p><div><p>该援助计划提供608.4亿美元援助乌克兰，其中138亿美元用于乌克兰购买先进武器，134亿美元用于补充美军库存，110亿美元用于支持美国在欧洲的盟友，另外138亿美元用于为乌克兰购买美国防御系统。 </p><p>还有90亿美元将作为经济援助拨给乌克兰这个饱受战争蹂躏的国家，这些援助将以贷款的形式提供，经美国国会批准后总统可以免除这些贷款。该方案现在将提交参议院表决，然后交由拜登总统签署。拜登已表示，一旦国会通过，他将签署这些法案。</p><p>得知消息后，乌克兰总统泽连斯基（Volodymyr Zelenskyy）通过社交媒体平台X表示：“感谢美国众议院两党以及议长迈克·约翰逊（Mike Johnson）本人作出的决定，让历史沿着正确的轨道前进”。</p><p>泽连斯基补充说：“民主与自由永远具有全球意义，只要美国帮助保护民主与自由，民主与自由就永远不会失败。众议院今天通过的至关重要的美国援助法案将阻止战争扩大，拯救成千上万人的生命，并帮助我们两国变得更加强大”。</p><p>泽连斯基说：“只有通过实力才能实现公正的和平与安全。我们希望这些法案能够得到参议院的支持，并递交给拜登总统。谢谢你，美国！”</p><p>拜登（Joe Biden）周六通过白宫发表的声明表示：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界舞台上的领导力发出了明确的信息。在这个关键的转折点上，他们齐心协力，响应历史的召唤，通过了急需的国家安全立法，这是我几个月来为之奋斗的目标”。</p><p>拜登说：“这一一揽子计划将为以色列和乌克兰提供重要支持；为加沙、苏丹、海地以及世界各地受冲突和自然灾害影响的其他地区提供急需的人道主义援助；并加强印度-太平洋的安全与稳定”。</p><p>拜登续指：“在以色列面临来自伊朗的前所未有的攻击、乌克兰遭受俄罗斯持续轰炸的情况下，这是一个非常紧迫的时刻。我要感谢约翰逊议长、杰弗里斯（众议院民主党、Hakeem Jeffries）领袖以及众议院两党议员联盟，他们投票支持将我们的国家安全放在首位”。</p><p>拜登说：“我敦促参议院尽快将这一方案提交到我的办公桌上，以便我能够将其签署成为法律，我们也可以迅速向乌克兰运送武器装备，以满足他们的紧急战场需求”。</p><p>北约秘书长斯托尔滕贝格（Jens Stoltenberg）同样通过X平台表示：“我对美国众议院批准向乌克兰提供新的重大援助计划表示欢迎。乌克兰正在利用北约盟国提供的武器摧毁俄罗斯的作战能力。这使我们欧洲和北美更加安全”。</p><p>欧盟委员会主席冯德莱恩（Ursula von der Leyen）在X平台上写道：“我对美国众议院压倒性的赞成票表示欢迎。乌克兰应该得到针对俄罗斯的一切支持。现在，我们要求美国参议院尽快投票，因为这关系到生命。跨大西洋盟国团结一致，支持自由与民主”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-311%25E6%25AF%2594112-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587610%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E6%258F%25B4%25E4%25B9%258C%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
