--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713683707000-->
-[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
+<!--1713746703000-->
+[泽连斯基：&quot;乌克兰不会成为第二个阿富汗&quot; 乌军在克里米亚击中一艘俄罗斯舰艇](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97-%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87)
 ------
 
-<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
+<div>21/04/2024 - 23:04</div><img src="https://s.rfi.fr/media/display/c78838b4-0022-11ef-82a5-005056bf30b7/w:1280/p:16x9/2024-04-03T120301Z_111254464_RC2YY6ARKUMI_RTRMADP_3_UKRAINE-CRISIS-FINLAND.JPG"><p><strong>在美国国会众议院通过对乌克兰新军事援助法案后，俄罗斯和乌克兰军队周日(4月21日）在重要城镇恰西夫亚尔（东部）附近发生激烈战斗；乌克兰宣称，乌军在克里米亚击中了一艘俄罗斯舰艇。乌克兰总统泽连斯基周日表示，美国新的援乌法案表明，乌克兰将不会成为第二个阿富汗。        </strong></p><div><p>法新社消息，俄罗斯国防部周日中午宣称，东部的博格达尼夫卡镇已“完全解放”，但乌克兰军队随后表示，俄军试图在空军的掩护配合下"改善战术局势"，但遭到乌克兰军队击退。</p><p>博格达尼夫卡是一个战前居民不足100人的小镇，距离俄罗斯军队的目标城镇恰西夫亚尔 (Chassiv Iar) 不到10公里。而恰西夫亚尔距离克拉马托尔斯克东南不到30公里，是顿涅茨克地区仍受乌克兰控制的主要城市，也是乌克兰军队重要的铁路和后勤枢纽。</p><p>另外，乌克兰周日宣称，乌克兰海军在克里米亚击中俄罗斯“科姆纳”号舰艇。负责公海救援（沉没潜艇或丢失货物）的科莫纳号是俄罗斯最老牌的军舰之一。</p><p>据多个军事网站称，“科姆纳”号于1915年下水，参加过两次世界大战，被认为是世界历史最久的仍可执行战斗任务的舰船。</p><p>乌克兰海军发言人普莱滕丘克表示，“科姆纳”号已经不再能执行任务。他说，“乌克兰还将继续进行打击行动，直到俄罗斯不再拥有船舰或离开吞并的克里米亚。</p><p>另据法新社消息，乌克兰总统泽连斯基周日接受美国全国广播公司频道采访，再次就美国众议院周六投票通过的美国对乌克兰援助计划表示，美国新的援乌法案表明，乌克兰将不会成为“第二个阿富汗”。</p><p>泽连斯基接受“会见新闻界”采访表示，“这项援助将增强乌克兰的实力，并向克里姆林宫发出强烈信号，表明乌克兰不会成为第二个阿富汗”。</p><p>泽连斯基称：“美国将与乌克兰站在一起，保护乌克兰人民并保护世界各地的民主。”</p><p>经过漫长而艰苦的谈判，美国众议院于周六通过了一揽子对外援助法案，其中包括向乌克兰提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>泽连斯基立即众院通过新的援乌法案表示欢迎称，"法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>泽连斯基在周日的访谈还表示，乌克兰部分部队已经“精疲力竭”，需要更换。但新的部队必须拥有装备。他表示，希望尽快为前线的士兵提供具体帮助。</p><p>美国国会众院通过的法案还需要经参议院通过并得到美国总统拜登的批准，然后才能开始向乌克兰运送军援。</p><p>法新社援引美国战争研究所在最新公告中警告称，这意味着这种援助“几周内不会开始影响前线战局”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25B8%258D%25E4%25BC%259A%25E6%2588%2590%25E4%25B8%25BA%25E7%25AC%25AC%25E4%25BA%258C%25E4%25B8%25AA%25E9%2598%25BF%25E5%25AF%258C%25E6%25B1%2597-%25E4%25B9%258C%25E5%2586%259B%25E5%259C%25A8%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E5%2587%25BB%25E4%25B8%25AD%25E4%25B8%2580%25E8%2589%2598%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E8%2588%25B0%25E8%2589%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
