--- a/articles/rfi/999973.md
+++ b/articles/rfi/999973.md
@@ -1,5 +1,5 @@
-<!--1713681902000-->
-[中国人花36万欧元 想在德国获得“世界一流的医疗系统”：富人贩运团伙落网](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240420-%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83-%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97-%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F-%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91)
+<!--1713746702000-->
+[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
 ------
 
-<div>20/04/2024 - 23:19</div><img src="https://s.rfi.fr/media/display/96ee1e2a-ff5b-11ee-aa46-005056a90284/w:1280/p:16x9/AP23327570102805.jpg"><p><strong>德国打击针对中国富人的人口走私团伙的行动还在进行中，并且曝光了更多细节。据德国《焦点》周刊报道，一个团伙大规模出售德国居留证，特别是向中国人出售，以获取大量金钱。其诱饵在于宣传德国“世界一流的医疗系统”和最好的教育。通过对八个联邦州的大规模突袭，警方捣毁了一个专门针对中国和阿曼富人的国际走私团伙。        </strong></p><div><p>本周三开始，德国联邦警察在几个联邦州开始大规模搜查走私嫌疑人，目前已执行了221项搜查令，没收了超过120万欧元的现金。十名嫌疑人已被拘留。其中包括来自科隆地区的两名律师，他们被认为是主要被告。据说，人贩子是通过他们的律师事务所招募的。</p><p>为了获得永久居留许可，被贩运者向嫌疑人支付了3万至35万欧元。据调查人员称，周四行动仍在继续，并在北威州进行了进一步搜查。其中包括116个住宅地址。在搜查过程中，涉嫌走私的人员被逮捕，“大量证据”被没收。</p><p>被偷渡者想要利用德国国家的好处。检察官亨德里克·蒂默周三在杜塞尔多夫表示，在个别案件中，获得居留许可的费用高达36万欧元。突击搜查的目标是38名犯罪嫌疑人以及147名据称被贩运者。如果算上后来带来的家人，大约有350人，其中大部分是中国公民。</p><p>据调查人员称，这些财力雄厚的外国人——包括来自南非和印度的——是通过互联网上所谓的“居留计划”招募的。那里不仅为德国的医疗和教育体系做广告，还承诺德国公民身份。《居留法》针对自营职业者和技术工人的特殊规则被非法利用。</p><p>蒂默说，被该团伙贩运的147人，大多数人目前下落不明。他们可能居住在原籍国，但也可能在德国拥有一个长期住所。其中一间涉嫌公寓是康斯坦茨附近的一所精英寄宿学校，“王室孩子也在那里上学，”蒂默说。 “事实上，不仅孩子在那里登记，父亲也是主申请人——当然他不住在那里。”</p><p>调查人员称，被偷渡者想要“利用德国社会、健康和教育国家的优势。 也许他们中的一些人想在欧洲度过退休时光。如果被偷渡者被发现，其伪造的居留许可将失效。只要他们被列为被告并且刑事诉讼仍在进行中，驱逐出境就会暂停。调查人员仍然希望得到他们的证人证词。</p><p>此次调查以“投资者”名义进行，因为涉嫌被贩运者想在德国投资公司或房地产，为贩运须付的总金额可能高达36万欧元，涉嫌犯罪。除其他外，还包括设立虚假公司、为所谓的住宅提供资金以及虚构工资。 此外，调查人员举例称，还必须向律师事务所支付高达4万欧元的“咨询费”。</p><p>一旦支付了走私费用，该律师事务所就联系外国使团——例如德国驻上海和广州领事馆——并签发了旅行签证。</p><p>据调查人员称，居留证是从北威州的克尔彭市和索林根市以及莱茵-埃尔夫特区和迪伦区的移民办公室获得的。团伙共同行动，将富有的外国人偷运到德国的行为已经持续了好几年。</p><p>此次调查的起因是德国驻中国广州领事馆的举报以及大量有关银行涉嫌洗钱的报道。调查于2020年开始，但部分犯罪发生在2016/2017年。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240420-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E8%258A%25B136%25E4%25B8%2587%25E6%25AC%25A7%25E5%2585%2583-%25E6%2583%25B3%25E5%259C%25A8%25E5%25BE%25B7%25E5%259B%25BD%25E8%258E%25B7%25E5%25BE%2597-%25E4%25B8%2596%25E7%2595%258C%25E4%25B8%2580%25E6%25B5%2581%25E7%259A%2584%25E5%258C%25BB%25E7%2596%2597%25E7%25B3%25BB%25E7%25BB%259F-%25E5%25AF%258C%25E4%25BA%25BA%25E8%25B4%25A9%25E8%25BF%2590%25E5%259B%25A2%25E4%25BC%2599%25E8%2590%25BD%25E7%25BD%2591&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
