--- a/articles/rfi/999974.md
+++ b/articles/rfi/999974.md
@@ -1,5 +1,5 @@
-<!--1713674702000-->
-[巴基斯坦自杀式袭击: 据称遇袭的日本人被误认为是中国人](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB-%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA)
+<!--1713712502000-->
+[日本首相向靖国神社奉献祭品  大臣参拜靖国神社](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240421-%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81-%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE)
 ------
 
-<div>20/04/2024 - 10:30</div><img src="https://s.rfi.fr/media/display/3a174222-fed8-11ee-805b-005056bf30b7/w:1280/p:16x9/2024-04-19T070615Z_942085290_RC2G97ATX36P_RTRMADP_3_PAKISTAN-ATTACK.JPG"><p><strong>巴基斯坦南部卡拉奇周五（4月19日）发生针对汽车的自杀式攻击，车内的五名日本男子所幸一人受轻伤，其他人未有大碍。两名袭击者均已死亡。遇袭的5人为一家日本公司雇员，爆炸发生时正乘车前往卡拉奇出口工业区的途中。报道指，日本人在巴基斯坦很少成为极端组织的攻击目标，日本媒体暗示他们可能被误当作了中国人而遇袭。        </strong></p><div><p>据本台法语部驻东京特约记者费德里克 查理（<strong>Frédéric Charles</strong>）的报道，巴基斯坦极端主义团体对中国在该国资助的工业项目怀有深刻敌意，他们的大多数攻击都是针对中国公民。日本权威财经媒体《日经新闻》报道指，此次攻击中，乘坐防弹车前往卡拉奇港口区的五名日本男子可能被误认为是中国公民。巴基斯坦警方也提及了这种可能性。</p><p>此次袭击据信是第一次针对在巴基斯坦的日本公司的员工。一位专门研究巴基斯坦激进主义的学者告诉日经新闻说，“在巴基斯坦工作的日本人开始担心该国武装分子可能会因长相而把他们误认为是中国人”。反恐专家库拉姆·伊克巴尔（Kuram Iqbal）表示，这次袭击显然是一起身份误袭案件。他说，“日本从未受到巴基斯坦恐怖分子的注意。“</p><p>报道指，日本在巴基斯坦的经济存在与中国相比很少，而中国资助的项目被认为不会给当地居民带来任何好处，大部分工作岗位都流向了中国劳动力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX8A.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E8%2587%25AA%25E6%259D%2580%25E5%25BC%258F%25E8%25A2%25AD%25E5%2587%25BB-%25E6%258D%25AE%25E7%25A7%25B0%25E9%2581%2587%25E8%25A2%25AD%25E7%259A%2584%25E6%2597%25A5%25E6%259C%25AC%25E4%25BA%25BA%25E8%25A2%25AB%25E8%25AF%25AF%25E8%25AE%25A4%25E4%25B8%25BA%25E6%2598%25AF%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX8A.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 09:57</div><img src="https://s.rfi.fr/media/display/3ceea9d8-1583-11ea-9068-005056bf7c53/w:1280/p:16x9/Yasukuni%201%20-%20pluie_0.jpg"><p><strong>一年一度的靖国神社“春大祭”于21日至23日在东京九段靖国神社举行。岸田首相献上名为“真榊”的祭品。        </strong></p><div><p>岸田首相自2021年10月就任首相以来，都在8月15日二战结束纪念日以及春秋两季靖国神社的定期祭典献上名为“真榊”的祭品，据透露，到23日“春大祭”结束，岸田首相本人不会去参拜靖国神社。</p><p>岸田内阁成员中，经济再兴大臣新藤义孝21日上午参拜了靖国神社。他表示：“我满怀崇敬的心情，参拜了那些曾经全心全意为国家奋斗的人们的英灵。”他表示，参拜靖国神社是“私人行为”。他还表示：“我向英灵汇报了三月底在硫磺岛举行了日美联合追悼会。”</p><p>新藤义孝是二战末期日美硫磺岛战役中日方担任指挥官的栗林忠道中将的外孙。</p><p>日本众参两院议长也献上祭品“真榊”。</p><p>韩国外交部21日对日本首相岸田文雄向靖国神社供奉祭品“真榊”以及部分大臣参拜靖国神社表示“深感失望和遗憾”。外交部在一份发言人评论中指出：“日本负有责任的领导人反复祭祀并参拜了美化侵略战争、合祀战犯的靖国神社。”评论敦促“日本负责任的领导人正视历史，在行动中表现出对过去谦虚的反思和真心的反省”，这是“面向未来的日韩关系发展的重要基础”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXFm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E7%259B%25B8%25E5%2590%2591%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE%25E5%25A5%2589%25E7%258C%25AE%25E7%25A5%25AD%25E5%2593%2581-%25E5%25A4%25A7%25E8%2587%25A3%25E5%258F%2582%25E6%258B%259C%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXFm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
