--- a/articles/rfi/999975.md
+++ b/articles/rfi/999975.md
@@ -1,5 +1,5 @@
-<!--1713667501000-->
-[美国会众议院压倒性通过TikTok剥离相关法案](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87tiktok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88)
+<!--1713712501000-->
+[中印角力背景下的马尔代夫立法选举 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240421-%E4%B8%AD%E5%8D%B0%E8%A7%92%E5%8A%9B%E8%83%8C%E6%99%AF%E4%B8%8B%E7%9A%84%E9%A9%AC%E5%B0%94%E4%BB%A3%E5%A4%AB%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE)
 ------
 
-<div>20/04/2024 - 19:31</div><img src="https://s.rfi.fr/media/display/c0964f20-ff3a-11ee-b3ae-005056bf30b7/w:1280/p:16x9/Capture-2203.JPG"><p><strong>4月20日，美国国会众议院以360票对58票的两党投票结果通过了《21世纪以实力求和平法案》（H.R. 8038）。该法案包括多项国家安全优先事项，包括制裁伊朗、扣押被冻结的俄罗斯主权资产，以及一项可能导致在全美国范围内禁止使用TikTok的措施。该法案要求TikTok目前的中国所有者在一年内出售其股份，否则TikTok将面临禁令。其还将允许美国总统对俄罗斯和伊朗实施新的制裁。        </strong></p><div><p>美联社报导指，美国众议院共和党人此前决定将TikTok剥离问题作为一个更大的对外援助计划的一部分，这是拜登总统的优先事项，同时国会也广泛支持乌克兰和以色列等盟友。</p><p>由于民主党人和共和党人都对TikTok的所有者——字节跳动表示了国家安全方面的担忧，一项销售期限更短、为期六个月的独立法案在3月份以两党压倒性票数在美国众议院获得通过。</p><p>修改后的措施在周六以360票赞成、58票反对获得通过，经过谈判，美国参议院将把出售的期限延长至9个月，如果出售正在进行中，可再延长3个月。法律挑战可能会进一步延长这一期限。</p><p>这些修改似乎旨在消除一些参议员的顾虑，即原来的六个月出售期限可能太短。然而，这些修改是否足以获得参议院的批准仍是未知数，因为一些主要参议员已表示希望以更慢的速度通过TikTok剥离法案。</p><p>TikTok已表示，如果剥离法案得到通过，很可能会诉诸法庭，试图阻止法律的实施，并称这将剥夺TikTok在美国约1.7亿用户的宪法第一修正案权利。数月来，TikTok斥资极力游说反对相关立法，并推动该应用美国用户，其中许多是年轻人致电国会表示反对。但这种激烈的反击和干预激怒了国会山的立法者们，他们普遍担心北京对TikTok及其母公司的影响力，而很少有议员自己使用该平台。</p><p>TikTok发言人周六在一份声明中称：“不幸的是，众议院正以重要的对外和人道主义援助为幌子，再次强行通过一项禁令法案，该法案将践踏1.7亿美国人的言论自由权，摧毁700万家企业，并关闭一个每年为美国经济贡献240亿美元的平台”。</p><p>此外，该法案还包含美国众议院外交委员会主席麦考尔（Michael McCaul）所说的“国会多年来通过的最全面的制裁伊朗措施”。其将对接收与加工伊朗石油的港口和炼油厂实施制裁，并对参与去年失效的联合国对伊朗导弹禁运所涵盖的活动或参与伊朗导弹和无人机供应或销售的任何人实施制裁。该法案还将进一步限制向伊朗出口原产于美国的商品和技术。</p><p>与此同时，该法案还将授权行政当局扣押并向乌克兰转移在美国的被冻结的俄罗斯主权资产，以帮助乌克兰进行战斗和重建。美国众议院议长约翰逊（Mike Johnson）表示，他正考虑将这项名为《REPO法案》的措施作为对乌援助的一种方式。</p><p>拜登政府的高级官员也一直在与七国集团（G7）国家合作，探讨帮助乌克兰的新战略，这需要美国国会的批准。官员们告诉美国有线电视新闻网（CNN）称，被七国集团和欧盟冻结的俄罗斯央行资产绝大部分由欧盟持有，美国仅持有价值约50亿美元的资产。此外，该法案还将对哈马斯、巴勒斯坦伊斯兰圣战组织（杰哈德）和其他巴勒斯坦恐怖组织实施强制性制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCC.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E5%258E%258B%25E5%2580%2592%25E6%2580%25A7%25E9%2580%259A%25E8%25BF%2587tiktok%25E5%2589%25A5%25E7%25A6%25BB%25E7%259B%25B8%25E5%2585%25B3%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCC.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 13:16</div><img src="https://s.rfi.fr/media/display/a50fb70a-ff2b-11ee-b09e-005056bf30b7/w:1280/p:16x9/000_34PM4D8.jpg"><p><strong>印度洋岛国马尔代夫周日（4月21日）举行立法选举，在中国和印度在该地区大国角力背景下，选举被认为对亲中的总统穆罕默德 穆伊祖的一大考验，其政党在众院不占多数， 新近当选的穆伊祖正推进外交调整，舍弃传统捐助国印度，与中国走的更近。在大选前，这一调整尤其受到反对派的反对。                    </strong></p><div><p>法新社报导，马尔代夫拥有原始白色海滩和僻静度假村，以南亚最昂贵的度假胜地之一著称，而现在，这个位居东西国际航运干线上具有避略地位的印度洋岛国，已成为印度和中国地缘政治竞争的热点。</p><p>现年45岁的穆伊祖去年9月以亲中的前总统亚明（Abdulla Yameen）的代理人之姿赢得大选。就任后，他提出一项削弱印度战略影响力的计划，迫使新德里撤回部署在马尔代夫的89名驻军，这些印度驻军在此驾驶新德里赠送的三架侦察机，在马尔代夫的辽阔海上边界巡逻。穆伊祖目前要求全面印度驻军必须5月10日之前离开。</p><p>与此同时，穆伊祖正不断拉近与中国的关系，他在就任三个月后已在今年一月正式访问北京，在立法选举热闹进行之际，穆伊祖本月把几个备受关注的基础建设合约批给了中国的国有企业，在选举期间引发争议。</p><p>投票前夕，马尔代夫首都马累涌现出一大波代表反对党的黄色旗帜和身着黄色T恤人士的集会，反对党试图阻止总统寻求获得议会多数的努力，并遏制其施政及改变该国外交方向的企图。</p><p>马尔代夫选举组织人呼吁全国约28.5万选民及时投票。设在各群岛的投票陛周日全天开放九个半小时，选举结果预料会在隔天一早揭晓。</p><p>穆伊祖一位不愿透露姓名的助手告诉法新社说，"在各政党为周日选举进行的竞选活动中，地缘政治在很大程度上占据了重要位置。”他说，“总统就任时承诺要求印度军队撤离马尔代夫，他正为此努力”但“自他上台以来议会并没有与他合作"。</p><p>穆伊祖去年年底就任以来，国会已驳回了他提名的三个内阁任命，并否决了他的一些政府预算提案。</p><p>马尔代夫目前国会是由穆伊祖的前一任总统索里（Ibrahim Mohamed Solih）担任党魁的亲印度的“马尔代夫民主党”主导，该党一直在试图阻挡穆伊祖各项重新调整马尔地夫外交方向的举措。</p><p>观察指，包括穆伊祖所属“人民全国大会党”在内的大党均处分裂状态下，任何单一政党预料都难以在国会取得多数席次，因此有必要组成联盟。而马尔代夫法院此前裁定撤销穆伊祖的导师、前总统亚明的腐败和洗钱罪11年监禁判决，亚明已于周四刚刚获释，这个变化被认为应有助于加强穆伊祖的力量。</p><p>亚明承诺将继续开展反印运动，正是这场运动使他的盟友穆伊祖在去年九月的总统选举获胜。穆伊祖承诺的驱逐驻扎在马尔代夫的89名印度驻军行动已从今年3月启动，已有 25名印度士兵撤离。</p><p>对于与印度的关系，曾任马尔代夫上届政府国防部长的民主党人玛丽亚·迪迪向法广驻马尔代夫特约记者 Sébastien Farcis表示说，“ 印度是我们最近的邻国，在紧急情况下我们总是给他们打电话。对我们来说最大的安全威胁是自然灾害或石油泄漏，因为世界三分之一的石油出口经过马尔代夫。这样的事故会摧毁我们依赖鱼业和旅游业。在这种情况下，印度可以帮助我们。而中国距离很远。”</p><p>印度视马尔代夫群岛为其势力范围的一部分，但随着穆伊祖的当选，马尔代夫归入中国、这个其最大外国债权国的轨道。 据马尔代夫国防部称， 3 月该国与北京签署了一项旨在 "加强双边关系 "的 "军事援助 "协议。Farcis报道，在拉近与中国关系的同时，穆伊祖政府拒绝提与中国结盟，表示该国继续欢迎印度的投资及粮食援助。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
