--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713665701000-->
-[美众院通过外援法案：欧盟北约等一致欢迎 泽连斯基称&quot;将拯救成千上万生命&quot;](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88-%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0-%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD)
+<!--1713683707000-->
+[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
 ------
 
-<div>20/04/2024 - 23:14</div><img src="https://s.rfi.fr/media/display/dba69570-ff5a-11ee-80b5-005056bf30b7/w:1280/p:16x9/2024-04-20T200417Z_1629375317_RC2G2W9TGCES_RTRMADP_3_USA-CONGRESS-UKRAINE-ZELENSKIY.JPG"><p><strong>经过漫长而艰难的谈判，美国国会众议院周六(4月20日）终于通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，乌克兰总统泽连斯基及欧盟和北约等各国一致对此表示欢迎。泽连斯基称"法案将阻止战争蔓延，拯救成千上万生命"，美国总统拜登也对众院在"历史性的会议上"通过关键的援乌法案表示欢迎。        </strong></p><div><p>法新社报道，在美国众院周六通过美国向乌克兰提供近610亿美元的援助法案后，乌克兰总统泽连斯基立即对此表示欢迎，泽连斯基在X 上发文感谢美国的议员们称：“美国众议院今天通过的拯救生命的法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>作为乌克兰最重要的支持者，美国总统拜登也在第一时间对众院在"历史性的会议上"通过关键的援乌法案表示欢迎。法案获两院通过后，将呈交总统拜登批准。</p><p>北约和欧盟 领导人周六也纷纷对美国众议院批准备受期待援乌法案表示欢迎。</p><p>北约秘书长斯托尔滕贝格表示，对美国众议院批准重要的援乌新法案表示欢迎，他说，这表明(美国国会）两党对乌克兰持续的支持。斯托尔滕贝格表示， “乌克兰正在使用北约盟国提供的武器摧毁俄罗斯的作战能力，此举将加强欧洲和北美所有人的安全”。</p><p>欧盟委员会主席冯德莱恩及欧洲理事会主席米歇尔也对美国众议院的投票结果表示欢迎。</p><p>欧洲理事会主席米歇尔在 X 上发文称， “这向克里姆林宫发出了一个明确的信息：那些相信自由和《联合国宪章》的人将继续支持乌克兰”；冯德莱恩在一份声明中表示：“乌克兰应该得到应对俄罗斯入侵的一切支持。现在我们呼吁美国参议院尽快投票，因为生命危在旦夕。跨大西洋盟友国家将团结一致支持自由和民主” 。</p><p>另外，德国外长贝尔博克表示，“对于乌克兰和欧洲的安全来说这是一个充满乐观情绪的一天”。贝尔伯克表示，“美国援助乌克兰的一个主要障碍已经消除，美国和欧洲站在自由一边，反对普京的恐怖战争”。</p><p>美国参议院民主党领袖舒默周六表示，参议院将尽快审议对外援助法案文本，最早可能在下周二进行。</p><p>共和党控制的美国联邦众议院周六通过总值950亿美元的对外援助法案，向乌克兰、以色列和台湾提供安全援助，并强制TikTok脱离中国母公司字节跳动。</p><p>众院周六以360票对58票通过表决的第1项法案，即"21世纪透过实力达成和平法案"（21st Century Peace through Strength Act），法案内容包括对伊朗的制裁、扣押冻结的俄罗斯主权资产，以及迫使短视频平台TikTok脱离中国母公司字节跳动（ByteDance），否则将在美国面临全国性禁令。TikTok在美国拥有约1.7亿用户。</p><p>随后，众院以385票对34票的投票结果，通过81亿美元的"印太安全补充法案"（Indo-Pacific Security Supplemental bill），其中包括向台湾和其他主要盟友提供20亿美元军事资金、用以补充向台湾和区域伙伴提供的国防物资和服务的19亿美元，以及用于抗衡中国的81亿美元。</p><p>"乌克兰安全补充拨款法案"（Ukraine Security Supplemental Appropriations Act）则以311票对112票过关，该法案将提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>最后，众院以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>上述4个法案获众院通过后将合并为1项修正案，并提交给参议院。</p><p>路透社报导，自民主党主导的联邦参议院通过类似措施以来，已过了2个多月。从民主党籍总统拜登到联邦参议院共和党领袖麦康奈（Mitch McConnell）等领导人，一直在敦促陷入困境的共和党籍众院议长约翰逊将其提交投票。</p><p>联邦参议院多数党领袖舒默（Chuck Schumer）先前已承诺，一旦众议院通过上述措施，民主党占多数的参议院将迅速行动。部分强硬派共和党籍极右翼议员则警告，他们可能会因约翰逊推动这些法案而罢免他。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587%25E5%25A4%2596%25E6%258F%25B4%25E6%25B3%2595%25E6%25A1%2588-%25E6%25AC%25A7%25E7%259B%259F%25E5%258C%2597%25E7%25BA%25A6%25E7%25AD%2589%25E4%25B8%2580%25E8%2587%25B4%25E6%25AC%25A2%25E8%25BF%258E-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA%25E7%25A7%25B0-%25E5%25B0%2586%25E6%258B%25AF%25E6%2595%2591%25E6%2588%2590%25E5%258D%2583%25E4%25B8%258A%25E4%25B8%2587%25E7%2594%259F%25E5%2591%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22%20-%20https%3A%2F%2Frfi.my%2FAXDJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22%20-%20https%3A%2F%2Frfi.my%2FAXDJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E5%A4%96%E6%8F%B4%E6%B3%95%E6%A1%88%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%8C%97%E7%BA%A6%E7%AD%89%E4%B8%80%E8%87%B4%E6%AC%A2%E8%BF%8E%20%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E7%A7%B0%22%E5%B0%86%E6%8B%AF%E6%95%91%E6%88%90%E5%8D%83%E4%B8%8A%E4%B8%87%E7%94%9F%E5%91%BD%22&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
