--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713651301000-->
-[内塔尼亚胡:美国对以色列的援助“捍卫了西方文明”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9-%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E)
+<!--1713665702000-->
+[科索沃国会跨党派代表团访台湾与候任总统赖清德会面](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2)
 ------
 
-<div>20/04/2024 - 23:23</div><img src="https://s.rfi.fr/media/display/c626eb40-f024-11ee-b825-005056bf30b7/w:1280/p:16x9/2024-03-31T135038Z_1609163870_RC2WC5A0S4MC_RTRMADP_3_ISRAEL-POLITICS-NETANYAHU.JPG"><p><strong>在以色列与巴勒斯坦哈马斯战争持续并与伊朗紧张加剧的背景下，美国众议院周六(4月20日）通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，其中包括向以色列提供264亿美元新的军事援助。以色列总理内塔尼亚胡称，新军事援助是“捍卫了西方文明”。        </strong></p><div><p>法新社报道，美国国会众院周六以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>以色列总理内塔尼亚胡立即对此表示欢迎。内塔尼亚胡在X上写道：“美国国会刚刚以压倒性多数通过了一项广受欢迎的援助法案，该法案表明了两党对以色列的强有力支持并捍卫了西方文明。”</p><p>以色列外长卡茨也对美国众议院的投票表示欢迎，卡茨在他的X账户上表示，这次投票“证明了以色列和美国之间的密切关系和战略伙伴关系，并向我们的敌人发出了强烈的信息”。</p><p>法新社称，在以色列周五向伊朗发起报复性袭击后，伊朗和以色列似乎正在摆脱可能的紧张升级，德黑兰则是淡化了以色列袭击的程度范围。伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸，美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列此前誓言要让伊朗为袭击以色列付出代价。</p><p>与此同时，以色列军队对被围困的加沙地带发动了数十次袭击，据民防部门称，其中一次袭击导致该地区南部拉法同一家庭的九名成员死亡，其中包括儿童。</p><p>另据巴勒斯坦卫生部门周六表示，以色列军队自进入约旦河西岸城市图勒凯尔姆开展军事行动以来，已造成至少13名巴勒斯坦人死亡。</p><p>巴勒斯坦表示，以军部分撤离图勒凯尔姆后，救援人员进入冲突现场，发现死者遗体。</p><p>巴勒斯坦传媒报道，以巴在图勒凯尔姆冲突期间，以军阻止救援人员进入现场救治。以色列传媒表示，行动期间，以军多次遭到巴人武装伏击，至少有9名以军士兵受伤。</p><p>另据报道，土耳其外长菲丹周六与埃及外长舒凯里在土耳其伊斯坦布尔会晤，讨论巴以冲突、伊朗和以色列的对抗、加沙地带的人道主义局势以及双边关系等问题。</p><p>菲丹会晤后表示，巴以冲突导致全球物流链受冲击，物价飞涨，为防止外溢效应引发全球性经济危机，必须果断采取措施，从根本上解决问题。他并表示，当务之急是实现两国方案。</p><p>舒凯里表示，巴以冲突有可能蔓延，伊以对抗局势已加剧，埃及方面呼吁各方保持克制，冲突、互不理解和暴力应马上停止。他称，伊以对抗转移了国际社会对加沙地带局势的关注。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%259A%2584%25E6%258F%25B4%25E5%258A%25A9-%25E6%258D%258D%25E5%258D%25AB%25E4%25BA%2586%25E8%25A5%25BF%25E6%2596%25B9%25E6%2596%2587%25E6%2598%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 17:09</div><img src="https://s.rfi.fr/media/display/e084a394-ff27-11ee-8caa-005056bfb2b6/w:1280/p:16x9/Taiwan%20Lai%20Ching-te%20Kosovo%20Taipei%2019042024.PNG"><p><strong>科索沃前总理率领的国会跨党派代表团访问台湾与候任总统赖清德会谈，双方希望透过更多元交流与合作，共创两国繁荣发展及增进人民福祉，壮大世界民主阵营的力量。        </strong></p><div><p>据中央社4月19日报道，赖清德当天下午在总统府与科索沃前总理霍蒂（Avdullah Hoti）率领的国会跨党派议员及企业代表会面，表达热烈欢迎，也感谢科索沃总统奥斯曼妮（Vjosa Osmani）及国会友台小组在第一时间对台湾0403地震的诚挚关心。</p><p>据台湾中华民国总统府网站消息，赖清德与科索沃访团会面时表示，科索沃是欧洲最年轻的国家，2008年科索沃宣布独立时，台湾是率先承认科索沃的国家之一。他还说，面对世界变局及威权主义扩张，台湾与科索沃同处捍卫自由的最前线。他强调，科索沃访宾此行具有“壮大民主”、“创造共荣”、“深化交流”三项重大意义。</p><p>率领科索沃代表团的前总理霍蒂恭贺赖清德赢得总统大选，并表示，作为主权独立国家，两国在国际上都面临类似挑战，期盼双边能交流经验，并加强与盟友的合作。霍蒂称他此行已经确立几项可以实质合作的面向，也与台湾经济部、对外贸易发展协会、台湾大学及台大医院等进行了有成果的会面。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXBK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E7%25A7%2591%25E7%25B4%25A2%25E6%25B2%2583%25E5%259B%25BD%25E4%25BC%259A%25E8%25B7%25A8%25E5%2585%259A%25E6%25B4%25BE%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E5%258F%25B0%25E6%25B9%25BE%25E4%25B8%258E%25E5%2580%2599%25E4%25BB%25BB%25E6%2580%25BB%25E7%25BB%259F%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E4%25BC%259A%25E9%259D%25A2&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXBK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
