--- a/articles/rfi/999991.md
+++ b/articles/rfi/999991.md
@@ -1,5 +1,5 @@
-<!--1713611701000-->
-[解放军成立信息支援部队 撤销战略支援部队番号](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F-%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7)
+<!--1713640501000-->
+[纽时:中国游泳运动员在东京奥运会前兴奋剂检测呈阳性是怎样逃脱的](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BA%BD%E6%97%B6-%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84)
 ------
 
-<div>19/04/2024 - 21:51</div><img src="https://s.rfi.fr/media/display/44663486-fe83-11ee-93e4-005056a90284/w:1280/p:16x9/Capture-2200.JPG"><p><strong>4月19日，中国人民解放军宣布成立信息支援部队，其由中央军委直接领导指挥，撤销原有的战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。战略支援部队成立大会于2015年12月31日举行，该部队成立至今已有逾8年的历史。        </strong></p><div><p>据官媒新华社报导，中国人民解放军信息支援部队成立大会周五在北京八一大楼隆重举行。中共中央总书记、国家主席、中央军委主席习近平向信息支援部队授予军旗并致训词，代表党中央和中央军委向信息支援部队全体官兵致以热烈祝贺。他强调，要贯彻新时代强军思想，贯彻新时代军事战略方针，坚持政治建军、改革强军、科技强军、人才强军、依法治军，聚焦备战打仗，按照体系融合、全域支撑的战略要求，锐意进取，扎实工作，努力建设一支强大的现代化信息支援部队。</p><p>报导提及，习近平在成立大会上将军旗授予信息支援部队司令员毕毅、政治委员李伟。信息支援部队主要领导向习近平敬礼，从习近平手中接过军旗，持旗肃立。全体官兵向军旗庄严敬礼。授旗仪式后，习近平致训词。他指出，调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。</p><p>报导称，习近平强调，信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大。要坚决听党指挥，全面贯彻党对军队绝对领导的根本原则和制度，全面加强部队党的建设，坚定理想信念，严肃纪律规矩，弘扬优良作风，确保部队绝对忠诚、绝对纯洁、绝对可靠。要有力支撑作战，坚持信息主导、联合制胜，畅通信息链路，融合信息资源，加强信息防护，深度融入全军联合作战体系，精准高效实施信息支援，服务保障各方向各领域军事斗争。要加快创新发展，坚持作战需求根本牵引，加强体系统筹，推进共建共享，强化科技创新，建设符合现代战争要求、具有我军特色的网络信息体系，高质量推动体系作战能力加速提升。</p><p>成立大会上，中共中央政治局委员、中央军委副主席张又侠宣读了习近平签发的中央军委关于组建信息支援部队的命令、信息支援部队领导班子成员任职命令和党委常委会组成通知，中共中央政治局委员、中央军委副主席何卫东主持大会。报导指，根据中央军委决定，新组建的信息支援部队由中央军委直接领导指挥，同时撤销战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。</p><p>此外，中国国防部新闻发言人吴谦周五晚在出席专题新闻发布会上介绍称，“调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大”。</p><p>就“构建新型军兵种结构布局”情况，吴谦指出：“这次改革后，中国人民解放军总体形成中央军委领导指挥下的陆军、海军、空军、火箭军等军种，军事航天部队、网络空间部队、信息支援部队、联勤保障部队等兵种的新型军兵种结构布局。随着形势任务的发展，我们将不断完善中国特色军事力量体系”。</p><p>就“军事航天部队担负什么任务”的提问，吴谦表示：“推进军事航天部队建设，对提高安全进出和开放利用太空能力、增强太空危机管控和综合治理效能、更好和平利用太空具有重要意义。中方的太空政策清晰明确，我们一向坚持和平利用太空，愿同所有和平利用太空的国家一道，加强交流、深化合作、为维护太空持久和平与共同安全作出贡献”。</p><p>就“网络空间部队担负什么任务”的提问，吴谦说：“推进网络空间部队建设，大力发展网络安全防御手段，对筑牢国家网络边防，及时发现和抵御网络入侵，捍卫国家网络主权和信息安全具有重要意义”。他续称：“我们积极倡导建设和平、安全、开放、合作的网络空间，致力于同国际社会一道共同构建网络命运共同体”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4j.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E8%25A7%25A3%25E6%2594%25BE%25E5%2586%259B%25E6%2588%2590%25E7%25AB%258B%25E4%25BF%25A1%25E6%2581%25AF%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F-%25E6%2592%25A4%25E9%2594%2580%25E6%2588%2598%25E7%2595%25A5%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F%25E7%2595%25AA%25E5%258F%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4j.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 20:08</div><img src="https://s.rfi.fr/media/display/116b19c6-ff40-11ee-beb1-005056a90284/w:1280/p:16x9/AP24111179328197.jpg"><p><strong>据纽约时报4月20日报道，在 2021 年东京奥运会前7个月，23 名顶尖的中国游泳运动员被检测出对同一种强效禁药呈阳性反应，但由于中国高官暗中为他们洗脱了使用兴奋剂的罪名，而负责监管体育竞赛使用药物的全球权威机构也选择不予干预，因此他们得以逃脱公众监督，继续参加比赛。        </strong></p><div><p>这个报道说，检测结果呈阳性的多名运动员--包括中国派出参加东京奥运会的游泳队中的近一半--后来都获得了奖牌，其中包括三枚金牌。他们中的许多人仍在为中国参赛，包括两枚金牌得主张雨霏在内的几名运动员有望在今年的巴黎夏季奥运会上再次争夺奖牌。</p><p>中国在其反兴奋剂监管机构的一份报告中承认了阳性检测结果，称这些游泳运动员是在不知情的情况下摄入了极少量禁药，因此没有必要对他们采取任何行动。</p><p>但《纽约时报》的调查发现，这一此前未被报道的事件在反兴奋剂领域造成了严重分歧，而中国运动员的成绩一直是该领域的热点。</p><p><strong>往来邮件显示</strong></p><p>美国官员和其他专家说，在进一步调查之前，这些游泳运动员本应被停赛或公开身份，他们认为，中国体育官员、游泳国际管理机构--世界水上运动协会以及负责监督各国药物检测项目的全球权威机构--世界反兴奋剂机构都没有做到这一点。</p><p>尽管一名中国反兴奋剂官员和一名世界游泳最高级别官员之间的往来邮件似乎表明可能发生了违规行为，而且至少必须公开承认，但这些主管当局还是决定不采取行动。</p><p>这篇报道说，即使在其他国家和国际反兴奋剂官员多次向世界反兴奋剂机构（WADA）提供情报，表明中国游泳运动员掩盖真相和使用兴奋剂之后，该机构仍选择不追究运动员的责任，声称 "缺乏任何可信的证据 "来质疑中国对事件的说法。世界反兴奋剂机构为其不采取行动的决定进行了辩护，称批评没有事实根据。</p><p><strong>美国长臂起诉</strong></p><p>据两位熟悉此案的人士和《纽约时报》审阅的一份文件称，联邦调查局（FBI）去年了解到这些阳性检测结果的存在和中方为运动员洗脱罪名所给出的理由，以及世界反兴奋剂机构的不作为。</p><p>美国联邦调查人员在最近几周采取了一些措施，以了解更多的情况。但联调局的发言人拒绝发表评论。美国当局的任何调查都将借助一个强大的新法律工具：2020 年通过的一项法律赋予美国司法部对企图通过使用兴奋剂败坏国际体育赛事的行为进行刑事起诉的权力，无论这些行为在哪里发生。</p><p>在回答《纽约时报》提问的声明中，美国反兴奋剂机构指责世界反兴奋剂机构（WADA）--其全球对应机构--未能履行其使命。</p><p><strong>干净运动员背后捅一刀</strong></p><p>美国反兴奋剂机构首席执行官特拉维斯-T-泰加特（Travis T. Tygart）说："这似乎是在干净运动员的背后捅了一刀，是对所有公平竞争、遵守规则的运动员的深深背叛”。"泰加特承认，自2020年以来，他曾多次向世界反兴奋剂机构提供有关对中国游泳界使用兴奋剂的指控。"所有那些掩盖这些阳性结果、压制勇敢举报者声音的肮脏之手，都必须在规则和法律的最大范围内被追究责任。"</p><p>纽时这篇报道说，本文基于对机密文件和电子邮件（包括由中国反兴奋剂机构编写并提交给世界反兴奋剂机构的报告）的审查，以及对世界各地参与反兴奋剂工作的人员的采访。有些采访是在不透露消息来源的基础上进行的，因为他们未被授权公开发言或担心遭到报复。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BA%25BD%25E6%2597%25B6-%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B8%25B8%25E6%25B3%25B3%25E8%25BF%2590%25E5%258A%25A8%25E5%2591%2598%25E5%259C%25A8%25E4%25B8%259C%25E4%25BA%25AC%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2589%258D%25E5%2585%25B4%25E5%25A5%258B%25E5%2589%2582%25E6%25A3%2580%25E6%25B5%258B%25E5%2591%2588%25E9%2598%25B3%25E6%2580%25A7%25E6%2598%25AF%25E6%2580%258E%25E6%25A0%25B7%25E9%2580%2583%25E8%2584%25B1%25E7%259A%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
