--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
-<!--1713591902000-->
-[国际货币基金组织：欧盟应该加强单一市场，以缩小与美国的差距](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87-%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D)
+<!--1713611701000-->
+[中国对台湾聚碳酸酯开征反倾销税 裁定美国丙酸存在倾销](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E-%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80)
 ------
 
-<div>20/04/2024 - 00:39</div><img src="https://s.rfi.fr/media/display/d6d2e1f0-fc05-11ee-945e-005056a90284/w:1280/p:16x9/2024-04-11T132347Z_1418145052_RC2C47AAXWUG_RTRMADP_3_ETHIOPIA-IMF.JPG"><p><strong>根据国际货币基金组织，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。        </strong></p><div><p>法新社从华盛顿报道，国际货币基金组织欧洲地区主任阿尔弗雷德·坎纳（Alfred Kanner）周五表示，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。</p><p>国际货币基金组织(IMF)欧洲地区主任阿尔弗雷德·坎纳在接受法新社采访时甚至表示说，如果欧盟能够将其单一市场内仍然存在的壁垒减少10个百分点的话，那么其GDP将会提高7%。</p><p>在举行了整整一周的国际货币基金组织和世界银行春季会议的最后一天，坎纳对法新社说，“与欧盟相比，美国的巨大优势在于它是一个大规模的单一市场”。</p><p>国际货币基金组织对2024年的经济预测显示，大西洋两岸之间存在差距，该组织预计，2024年，美国的经济增长率为2.7%，欧元区仅为0.8%；而2023年，美国是2.5%，欧元区是0.4%。</p><p>坎纳表示，对于欧洲来说，追赶上部分的落后，并不需要巨大的改变。他坚称，改善边境投资，推进银行业联盟、金融联盟，确保养老金可以从一个成员国转移到另一个成员国，促进劳工的流动，实现成员国之间文凭的认可，在这些问题上，是“不应该有任何争论的”。</p><p>坎纳还表示，欧洲国家必须进行结构性改革，为初始教育和整个职业生涯的教育和培训提供更多的空间。</p><p>他说，“为了加强技能，特别是随着人工智能的到来，我们需要工作方法的灵活性和适应性。”</p><p>不过，欧洲国家在生产率方面面临的主要挑战之一是人口老龄化，这一点在人口正在下降的欧洲大陆东部已经很明显。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5c.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A7%25E5%25B8%2581%25E5%259F%25BA%25E9%2587%2591%25E7%25BB%2584%25E7%25BB%2587-%25E6%25AC%25A7%25E7%259B%259F%25E5%25BA%2594%25E8%25AF%25A5%25E5%258A%25A0%25E5%25BC%25BA%25E5%258D%2595%25E4%25B8%2580%25E5%25B8%2582%25E5%259C%25BA%25EF%25BC%258C%25E4%25BB%25A5%25E7%25BC%25A9%25E5%25B0%258F%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E7%259A%2584%25E5%25B7%25AE%25E8%25B7%259D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5c.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 11:13</div><img src="https://s.rfi.fr/media/display/05f75f40-fef6-11ee-9c4e-005056bf30b7/w:1280/p:16x9/93faf4a873084aad99185a73a87055ec.jpg"><p><strong>据中央社报道，中国商务部对原产于台湾的进口聚碳酸酯反倾销做出最终裁定，从今天4月20日起征收反倾销税，为期5年。此外，也对美国进口的丙酸裁定存在倾销，调查机关决定采用保证金形式实施临时反倾销措施。        </strong></p><div><p>聚碳酸酯为「海峡两岸经济合作框架协议」（ECFA）早收清单小项之一。报道称，在2024年台湾总统大选前夕，中国对台进行施压，ECFA项目终止为其中一项手段。</p><p>2022年11月30日，中国商务部决定对原产于台湾的进口聚碳酸酯进行反倾销立案调查。</p><p>当时，对台湾聚碳酸酯课征最高税率22.4%的临时反倾销税。不过，去年11月30日决定将此调查延长至2024年的5月29日。</p><p>19日，北京选在民进党总统当选人赖清德5月20日上任前的一个月公布调查结果并决定征收为期5年的反倾销税，引发政治联想。</p><p>这是中国第一起针对台湾输入商品进行的反倾销调查，尤其聚碳酸酯属于ECFA早收列表项目，是否涉及中国变相取消ECFA早收红利，甚至取消ECFA，也引起关注。</p><p>聚碳酸酯是一种热塑性塑料，主要用于电子电器、汽车、光学、包装、医疗器械等领域。目前中国是台湾聚碳酸酯最大出口市场，根据海关数据显示，去年出口约8.3亿美元到中国，占比约78.5％。</p><p>据中国商务部公告，反倾销税包含台湾化学纤维股份有限公司9.0%；台湾出光石油化学股份有限公司9.0%；奇美实业股份有限公司12.2%；奇菱科技股份有限公司12.2%；其他台湾地区公司22.4%。</p><p>与此同时，中国商务部官网也发布「关于原产于美国的进口丙酸反倾销调查的初步裁定公告」，初步认定被调查产品存在倾销。调查机关决定采用保证金形式实施临时反倾销措施。</p><p>自2024年4月20日起，进口业者在进口原产于美国的丙酸时，应依据初裁决定所确定的保证金比率，向中国海关提供相应的保证金。据中国商务部说，保证金比率为43.5%。</p><p>丙酸是重要的精细化工产品及有机合成原料，主要用于生产防腐剂、防霉剂、除草剂、医药中间体等，广泛应用于食品、饲料、农药、医药等领域。</p><p>外界注意到，美国进口的丙酸被中国裁定涉及反倾销之前，美国白宫网站17日发布消息，指责中国不公平做法，宣布计划针对中国钢铝产品采取新的限制措施，包括将对中国钢铝产品的301关税提高至现有水平的3倍，并与邻国合作防止中国钢铝产品间接出口美国等。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX8U.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25AF%25B9%25E5%258F%25B0%25E6%25B9%25BE%25E8%2581%259A%25E7%25A2%25B3%25E9%2585%25B8%25E9%2585%25AF%25E5%25BC%2580%25E5%25BE%2581%25E5%258F%258D%25E5%2580%25BE%25E9%2594%2580%25E7%25A8%258E-%25E8%25A3%2581%25E5%25AE%259A%25E7%25BE%258E%25E5%259B%25BD%25E4%25B8%2599%25E9%2585%25B8%25E5%25AD%2598%25E5%259C%25A8%25E5%2580%25BE%25E9%2594%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80%20-%20https%3A%2F%2Frfi.my%2FAX8U.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80%20-%20https%3A%2F%2Frfi.my%2FAX8U.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX8U.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
