--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
-<!--1713586502000-->
-[以色列报复伊朗：国际社会呼吁保持克制 联合国要求停止报复的&quot;危险循环&quot;](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97-%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%91%BC%E5%90%81%E5%90%84%E6%96%B9%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6-%E9%81%BF%E5%85%8D%E4%B8%AD%E4%B8%9C%E5%B1%80%E5%8A%BF%E8%BF%9B%E4%B8%80%E6%AD%A5%E5%8D%87%E7%BA%A7)
+<!--1713611701000-->
+[戴琪：对中国商品关税的审查将“很快”结束](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240419-%E6%88%B4%E7%90%AA-%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86-%E5%BE%88%E5%BF%AB-%E7%BB%93%E6%9D%9F)
 ------
 
-<div>19/04/2024 - 23:24</div><img src="https://s.rfi.fr/media/display/22dbb506-fe93-11ee-8beb-005056bf30b7/w:1280/p:16x9/2024-04-19T114931Z_154933884_RC2N97AI3CSX_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>以色列据报向伊朗发动袭击，报复上周遭到伊朗无人机和导弹空袭。伊朗传媒报道，防空系统在中部城市伊斯法罕击落三架无人机，以色列至今保持沉默。国际社会周五呼吁各方保持克制，避免中东局势不断升级。美国国务卿布林肯表示，美国“没有参与进攻行动”，并强调美国和G7成员国的目标是“缓和局势”。联合国秘书长古特雷斯发出新的呼吁，要求各方“停止中东报复的危险循环”。        </strong></p><div><p>法新社报道，伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸声，但伊朗当局淡化此次爆炸的影响，并没有直接指责以色列，以色列也没有声称对此次爆炸负责。</p><p>美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列誓言要让伊朗为袭击以色列付出代价。</p><p>一位不愿透露姓名的美国国会高级官员向法新社证实，以色列向伊朗发动了袭击。</p><p>周五早些时候，伊朗法尔斯通讯社报道称，位于伊斯法罕及其机场之间的卡贾瓦雷斯坦军事基地附近发生了三起爆炸。</p><p>伊朗航天局发言人表示，无人机被击落，但“没有发生导弹袭击”。 他补充说，“到目前为止，还没有发生来自境外针对伊斯法罕或该国其他地区的空袭”。</p><p>以色列军方发言人对法新社表示，“我们目前不予置评。”</p><p>据《纽约时报》援引伊朗官员的话称，这次袭击是由小型无人机实施的，可能是从伊朗境内发射的。《华盛顿邮报》援引一位要求匿名的以色列官员的话称，此次袭击旨在向伊朗表明，以色列有能力在其领土内发动袭击。</p><p>塔斯尼姆通讯社（Tasnim News Agency）报导，伊斯法罕地区的核设施“绝对安全”。国际原子能机构也证实，核设施“没有受到损害”。</p><p>-国际社会周五呼吁各方保持克制 避免中东局势不断升级-</p><p>在意大利卡普里岛举行的七国集团部长级会议上，意大利外长塔亚尼确认，以色列的传统盟友美国“在最后一刻获悉”袭击事件，但没有具体说明是由谁通知的。</p><p>出席卡普里岛G7部长会议的美国国务卿布林肯表示，美国“没有参与进攻行动”，布林肯并强调美国和七国集团成员国的目标是“缓和局势”。</p><p>美国拜登政府几天来一直坚称，不希望“与伊朗发生长期战争”。</p><p>欧盟委员会主席冯德莱恩周五也呼吁各方克制，避免中东紧张局势进一步升高。</p><p>在以色列对伊朗发动袭击后，法国周五再次呼吁停止中东军事升级。法国外交部副发言人勒莫尼表示，"(军事升级）不符合任何人的利益，只会加剧中东的不稳定和不安全”。 他在一份书面声明中称，法国正在与其伙伴国家共同努力缓和局势。”</p><p>英国首相苏纳克周五表示，希望中东各方能够"保持冷静"。法新社报导，苏纳克表示，"中东局势大幅升级不符合任何人的利益，我们希望看到整个地区都能保持冷静。"</p><p>   -“停止危险循环”-</p><p>联合国秘书长古特雷斯呼吁立即结束中东地区相互报復的循环。</p><p>古特雷斯透过发言人发表声明，呼吁国际社会共同努力，阻止令整个中东地区及更大范围带来毁灭后果的发展。古特雷斯在通过发言人发表的一份声明中表示谴责任何报复行为，他并呼吁国际社会共同努力，防止任何可能给整个地区和更广大范围带来毁灭性后果的进一步事态发展。。</p><p>联合国原子能机构总干事格罗西也表达了同样的担忧，他呼吁各方保持“极度克制”。此前，加沙地带长达六个半月的战争加剧了人们对更大范围地区冲突的担忧。</p><p>国际原子能机构在一条推文中说：“国际原子能机构可以证实，伊朗的核设施没有受到损害。格罗西继续呼吁所有人保持极度克制，并重申核设施永远不应成为军事冲突的目标。”</p><p>与此同时，联合国人权高专办公室也敦促各方迅速“采取措施缓和局势”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5C.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597-%25E5%259B%25BD%25E9%2599%2585%25E7%25A4%25BE%25E4%25BC%259A%25E5%2591%25BC%25E5%2590%2581%25E5%2590%2584%25E6%2596%25B9%25E4%25BF%259D%25E6%258C%2581%25E5%2585%258B%25E5%2588%25B6-%25E9%2581%25BF%25E5%2585%258D%25E4%25B8%25AD%25E4%25B8%259C%25E5%25B1%2580%25E5%258A%25BF%25E8%25BF%259B%25E4%25B8%2580%25E6%25AD%25A5%25E5%258D%2587%25E7%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%EF%BC%9A%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%91%BC%E5%90%81%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20%E8%81%94%E5%90%88%E5%9B%BD%E8%A6%81%E6%B1%82%E5%81%9C%E6%AD%A2%E6%8A%A5%E5%A4%8D%E7%9A%84%22%E5%8D%B1%E9%99%A9%E5%BE%AA%E7%8E%AF%22%20-%20https%3A%2F%2Frfi.my%2FAX5C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%EF%BC%9A%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%91%BC%E5%90%81%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20%E8%81%94%E5%90%88%E5%9B%BD%E8%A6%81%E6%B1%82%E5%81%9C%E6%AD%A2%E6%8A%A5%E5%A4%8D%E7%9A%84%22%E5%8D%B1%E9%99%A9%E5%BE%AA%E7%8E%AF%22%20-%20https%3A%2F%2Frfi.my%2FAX5C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5C.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%EF%BC%9A%E5%9B%BD%E9%99%85%E7%A4%BE%E4%BC%9A%E5%91%BC%E5%90%81%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20%E8%81%94%E5%90%88%E5%9B%BD%E8%A6%81%E6%B1%82%E5%81%9C%E6%AD%A2%E6%8A%A5%E5%A4%8D%E7%9A%84%22%E5%8D%B1%E9%99%A9%E5%BE%AA%E7%8E%AF%22&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月19日在受访时表示，她预计“很快”就会对价值3000多亿美元中国商品加征关税的审查得出结论，拜登政府一直在研究如何使相关措施更具战略性和有效性。        </strong></p><div><p>戴琪周五在接受彭博电视节目采访时说，拜登政府保留从特朗普执政时期继承的关税是出于 “战略目的”，并将其视为与北京打交道的有效筹码。她还指出，中国钢铁和铝业的产能过剩不仅威胁到美国，也威胁到世界各国，因此需要采取强有力的应对措施。</p><p>戴琪说，拜登政府正寻求“挺身而出，抵制那些可能被用来对经济体施加政治压力的弱点所带来的胁迫”。拜登总统周三讲话呼吁对中国钢铁和铝征收更高的关税，因为他想在11月大选前争取工会工人的支持。</p><p>拜登政府正推动的新关税，意在支撑美国钢铁业并讨好其工人，将对某些中国钢铁和铝产品征收25%的关税。这些关税将作为正在进行的审查的一部分，同时美国还对中国的造船业展开正式调查。</p><p>对中国提高金属关税的原因是，多年来从中国进口产品对美国国内买家来说一直不赢利。目前的301条款关税、特朗普时代的232条款关税以及其他现有的反倾销和反补贴关税，有效地消减了中国钢铁和铝的进口。</p><p>同时，美国贸易代表办公室17日宣布对中国海事、物流和造船业发起301调查，美国钢铁工人联合会（USW）等五大工会上月曾联名要求拜登政府进行相关调查。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX50.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240419-%25E6%2588%25B4%25E7%2590%25AA-%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E5%2595%2586%25E5%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E7%259A%2584%25E5%25AE%25A1%25E6%259F%25A5%25E5%25B0%2586-%25E5%25BE%2588%25E5%25BF%25AB-%25E7%25BB%2593%25E6%259D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX50.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
