--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713586502000-->
-[应网信办要求 苹果从中国应用商店下架WhatsApp和Threads](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82-%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6whatsapp%E5%92%8Cthreads)
+<!--1713595501000-->
+[涉巴基斯坦弹道导弹计划 美国制裁4实体包括3家中企](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92-%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81)
 ------
 
-<div>19/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/ba5e9202-e847-11ee-9d09-005056a90284/w:1280/p:16x9/AP24082277039710.jpg"><p><strong>苹果公司4月19日表示，已将Meta公司旗下的应用程序WhatsApp和Threads从其在中国的应用商店下架，原因是中国政府以国家安全为由下令下架。        </strong></p><div><p>路透社报导指，根据应用程序跟踪公司七麦数据和AppMagic的数据，Telegram和Signal这两款外国通信应用程序也于周五被下架。这四款应用程序的下架表明，中央政府至少对一些不受其控制的外国在线信息服务越来越不能容忍。这也预示着苹果在中国的回旋余地越来越小。</p><p>尽管如此，根据路透社周五的查看，包括Facebook、Instagram和Messenger在内的其他Meta公司旗下的应用程序仍可下载。由西方公司开发的许多其他流行应用程序，包括YouTube和X（原推特），也可以下载。目前尚不清楚WhatsApp或Threads如何引起中国当局的安全担忧。</p><p>苹果公司在一封电子邮件声明中说：“基于他们的国家安全考虑，国家互联网信息办公室下令从中国店面下架这些应用程序”。该声明说：“我们有义务遵守我们运营所在国家的法律，即使我们有不同意见”。Meta公司拒绝发表评论，并将询问转给了苹果公司。</p><p>苹果公司没有回应就Signal和Telegram发表评论的请求。这两家通信应用程序公司的代表没有立即回复路透社的置评请求。国家互联网信息办公室也没有立即回复置评请求。</p><p>上述四款应用程序在中国都没有被广泛使用，腾讯的微信是目前在华最主要的通信服务应用。这些应用程序和许多外国应用程序在中国网络上通常被防火墙屏蔽，只能通过VPN或其他代理工具使用。</p><p>这四款应用程序在香港和澳门仍然可用。一些中国科技行业的专家说，政府对WhatsApp和Threads下达的命令可能与去年8月的一项新规定有关，该规定要求所有在中国上市的应用程序都必须向政府注册，否则将面临被下架的风险。公司完成注册的截止日期是3月底，该规定于4月1日生效。</p><p>苹果公司曾从中国应用商店下架过应用程序。2017年，苹果下架了《纽约时报》的新闻应用程序，称其违反了当地法规，此举正值世界第二大经济体新闻审查制度不断加强之际。该应用在苹果中国应用商店仍无法下载。去年，当中国政府正在制定有关人工智能生成服务的地方法规时，苹果下架了一些类似于ChatGPT的应用程序。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E5%25BA%2594%25E7%25BD%2591%25E4%25BF%25A1%25E5%258A%259E%25E8%25A6%2581%25E6%25B1%2582-%25E8%258B%25B9%25E6%259E%259C%25E4%25BB%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%25BA%2594%25E7%2594%25A8%25E5%2595%2586%25E5%25BA%2597%25E4%25B8%258B%25E6%259E%25B6whatsapp%25E5%2592%258Cthreads&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 00:32</div><img src="https://s.rfi.fr/media/display/8e9d3e60-c1a1-11ee-9b11-005056a90284/w:1280/p:16x9/AP23199673095971.jpg"><p><strong>美国国务院发言人米勒（Matthew Miller）4月19日通过声明宣布，“根据针对大规模杀伤性武器及其运载工具扩散者的第13382号行政命令，我们正在指定四个实体。这些实体——三个位于中华人民共和国（PRC），一个位于白俄罗斯——向巴基斯坦的弹道导弹计划，包括其远程导弹计划提供了导弹适用物品”。他称，“美国致力于加强全球防扩散机制，采取行动破坏支持令人担忧的扩散活动的采购网络”。        </strong></p><div><p>米勒在声明中表示：“我们今天指定的实体：明斯克轮式拖拉机厂、西安龙德科技发展有限公司、天津Creative Source国际贸易有限公司（Tianjin Creative Source International Trade Co Ltd）和北京固鸿科技有限公司（Granpect Co. Ltd.），这些实体参与的活动或交易对巴基斯坦扩散大规模杀伤性武器或其运载工具，包括制造、获取、拥有、开发、运输、转移或使用此类物项的任何努力，起到了实质性作用，或构成了实质性作用的风险”。</p><p>该声明称：“美国与其他伙伴密切合作，致力于加强全球防扩散机制，无论大规模杀伤性武器的扩散网络出现在何处，都要对其进行威慑和瓦解”。根据相关法律规定，被指定人员在美国境内或由美国人拥有或控制的所有财产和财产权益均被封锁，必须向美国财政部海外资产控制办公室（OFAC）报告。</p><p>此外，所有直接或间接拥有一个或多个被封锁者50%或以上所有权的个人或实体也会被封锁。美国人或在美国境内，或过境进行的所有交易，凡涉及被指定者或在其他方面被封锁者的任何财产或财产权益的，均被禁止，除非获得美国财政部海外资产控制办公室颁发的一般或特定许可证的授权或豁免。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25B6%2589%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E5%25BC%25B9%25E9%2581%2593%25E5%25AF%25BC%25E5%25BC%25B9%25E8%25AE%25A1%25E5%2588%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%2588%25B6%25E8%25A3%25814%25E5%25AE%259E%25E4%25BD%2593%25E5%258C%2585%25E6%258B%25AC3%25E5%25AE%25B6%25E4%25B8%25AD%25E4%25BC%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
