--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-23 [每日一语 2024.4.22](/articles/cdt/341399.md)
+
 4-23 [每日一语 2024.4.21](/articles/cdt/341401.md)
 
 4-22 [北青深一度｜清北商科毕业生“疯狂赚钱”的野心落空后｜深度报道](/articles/cdt/341406.md)
@@ -598,6 +600,4 @@
 3-20 [界面新闻｜关于忽然爆红的“天水麻辣烫”，你可能想多了](/articles/cdt/342503.md)
 
 3-20 [再昧拾金｜俄罗斯的老百姓从没活得这么爽过](/articles/cdt/342505.md)
-
-3-19 [大漠鱼｜微博网友景树仁被刑拘，请警方公开其涉嫌寻滋事实以供监督](/articles/cdt/342515.md)
 
